@@ -246,20 +246,18 @@ public class PinotInstanceAssignmentRestletResource {
     return instancePartitionsMap;
   }
 
-  /**
-   * Assign instances given the type of instancePartitions.
-   * @param instancePartitionsMap the empty map to be filled.
-   * @param tableConfig table config
-   * @param instanceConfigs list of instance configs
-   * @param instancePartitionsType type of instancePartitions
-   */
+  /// Assign instances given the type of instancePartitions.
+  /// @param instancePartitionsMap the empty map to be filled.
+  /// @param tableConfig table config
+  /// @param instanceConfigs list of instance configs
+  /// @param instancePartitionsType type of instancePartitions
   private void assignInstancesForInstancePartitionsType(Map<String, InstancePartitions> instancePartitionsMap,
       TableConfig tableConfig, List<InstanceConfig> instanceConfigs, InstancePartitionsType instancePartitionsType) {
     String tableNameWithType = tableConfig.getTableName();
     if (!InstancePartitionsUtils.hasPreConfiguredInstancePartitions(tableConfig, instancePartitionsType)) {
       InstancePartitions existingInstancePartitions =
           InstancePartitionsUtils.fetchInstancePartitions(_resourceManager.getHelixZkManager().getHelixPropertyStore(),
-              InstancePartitionsUtils.getInstancePartitionsName(tableNameWithType, instancePartitionsType.toString()));
+              InstancePartitionsUtils.getInstancePartitionsName(tableNameWithType, instancePartitionsType));
       instancePartitionsMap.put(instancePartitionsType.toString(),
           new InstanceAssignmentDriver(tableConfig).assignInstances(instancePartitionsType, instanceConfigs,
               existingInstancePartitions));
@@ -269,7 +267,7 @@ public class PinotInstanceAssignmentRestletResource {
         // generation for minimum difference
         InstancePartitions existingInstancePartitions = InstancePartitionsUtils.fetchInstancePartitions(
             _resourceManager.getHelixZkManager().getHelixPropertyStore(),
-            InstancePartitionsUtils.getInstancePartitionsName(tableNameWithType, instancePartitionsType.toString()));
+            InstancePartitionsUtils.getInstancePartitionsName(tableNameWithType, instancePartitionsType));
         String rawTableName = TableNameBuilder.extractRawTableName(tableNameWithType);
         // fetch the pre-configured instance partitions, the renaming part is irrelevant as we are not really
         // preserving this preConfigured, but only using it as a reference to generate the new instance partitions
@@ -313,7 +311,8 @@ public class PinotInstanceAssignmentRestletResource {
   private void persistInstancePartitionsHelper(InstancePartitions instancePartitions) {
     try {
       LOGGER.info("Persisting instance partitions: {}", instancePartitions);
-      InstancePartitionsUtils.persistInstancePartitions(_resourceManager.getPropertyStore(), instancePartitions);
+      InstancePartitionsUtils.persistInstancePartitions(_resourceManager.getPropertyStore(), instancePartitions,
+          _resourceManager.getQueryWorkloadManager());
     } catch (Exception e) {
       throw new ControllerApplicationException(LOGGER, "Caught Exception while persisting the instance partitions",
           Response.Status.INTERNAL_SERVER_ERROR, e);
@@ -344,17 +343,17 @@ public class PinotInstanceAssignmentRestletResource {
     if (tableType != TableType.REALTIME) {
       if (InstancePartitionsType.OFFLINE.getInstancePartitionsName(rawTableName).equals(instancePartitionsName)) {
         persistInstancePartitionsHelper(instancePartitions);
-        return Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(), instancePartitions);
+        return Map.of(InstancePartitionsType.OFFLINE.toString(), instancePartitions);
       }
     }
     if (tableType != TableType.OFFLINE) {
       if (InstancePartitionsType.CONSUMING.getInstancePartitionsName(rawTableName).equals(instancePartitionsName)) {
         persistInstancePartitionsHelper(instancePartitions);
-        return Collections.singletonMap(InstancePartitionsType.CONSUMING.toString(), instancePartitions);
+        return Map.of(InstancePartitionsType.CONSUMING.toString(), instancePartitions);
       }
       if (InstancePartitionsType.COMPLETED.getInstancePartitionsName(rawTableName).equals(instancePartitionsName)) {
         persistInstancePartitionsHelper(instancePartitions);
-        return Collections.singletonMap(InstancePartitionsType.COMPLETED.toString(), instancePartitions);
+        return Map.of(InstancePartitionsType.COMPLETED.toString(), instancePartitions);
       }
     }
 
@@ -367,7 +366,7 @@ public class PinotInstanceAssignmentRestletResource {
           if (InstancePartitionsUtils.getInstancePartitionsNameForTier(tableConfig.getTableName(), tierConfig.getName())
               .equals(instancePartitionsName)) {
             persistInstancePartitionsHelper(instancePartitions);
-            return Collections.singletonMap(tierConfig.getName(), instancePartitions);
+            return Map.of(tierConfig.getName(), instancePartitions);
           }
         }
       }
