@@ -47,6 +47,7 @@ import org.apache.pinot.spi.config.table.assignment.InstanceConstraintConfig;
 import org.apache.pinot.spi.config.table.assignment.InstancePartitionsType;
 import org.apache.pinot.spi.config.table.assignment.InstanceReplicaGroupPartitionConfig;
 import org.apache.pinot.spi.config.table.assignment.InstanceTagPoolConfig;
+import org.apache.pinot.spi.config.table.assignment.SegmentAssignmentConfig;
 import org.apache.pinot.spi.stream.StreamMetadataProvider;
 import org.apache.pinot.spi.utils.CommonConstants.Segment.AssignmentStrategy;
 import org.apache.pinot.spi.utils.Enablement;
@@ -75,7 +76,8 @@ public class InstanceAssignmentTest {
     TableConfig tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setServerTenant(TENANT_NAME)
             .setNumReplicas(numReplicas)
-            .setSegmentAssignmentStrategy(AssignmentStrategy.REPLICA_GROUP_SEGMENT_ASSIGNMENT_STRATEGY).build();
+            .setSegmentAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
+                new SegmentAssignmentConfig(AssignmentStrategy.REPLICA_GROUP_SEGMENT_ASSIGNMENT_STRATEGY))).build();
     int numInstancesPerPartition = 2;
     tableConfig.getValidationConfig()
         .setReplicaGroupStrategyConfig(new ReplicaGroupStrategyConfig(null, numInstancesPerPartition));
@@ -109,7 +111,7 @@ public class InstanceAssignmentTest {
     tableConfig.getValidationConfig()
         .setReplicaGroupStrategyConfig(new ReplicaGroupStrategyConfig(partitionColumnName, numInstancesPerPartition));
     SegmentPartitionConfig segmentPartitionConfig = new SegmentPartitionConfig(
-        Collections.singletonMap(partitionColumnName, new ColumnPartitionConfig("Modulo", numPartitions, null)));
+        Map.of(partitionColumnName, new ColumnPartitionConfig("Modulo", numPartitions, null)));
     tableConfig.getIndexingConfig().setSegmentPartitionConfig(segmentPartitionConfig);
 
     // Instances should be assigned to 3 replica-groups with a round-robin fashion, each with 3 instances, then these 3
@@ -887,7 +889,7 @@ public class InstanceAssignmentTest {
         InstanceConfig instanceConfig = new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i);
         instanceConfig.addTag(OFFLINE_TAG);
         instanceConfig.getRecord()
-            .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+            .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
         instanceConfigs.add(instanceConfig);
       }
       InstanceTagPoolConfig tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -896,10 +898,10 @@ public class InstanceAssignmentTest {
               numPartitions, numInstancesPerPartition, false, null);
 
       TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-          .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+          .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
               new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                   InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-          .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured"))
+          .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured"))
           .build();
       InstanceAssignmentDriver driver = new InstanceAssignmentDriver(tableConfig);
       InstancePartitions preConfigured = new InstancePartitions("preConfigured");
@@ -993,7 +995,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     InstanceTagPoolConfig tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -1002,10 +1004,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     InstanceAssignmentDriver driver = new InstanceAssignmentDriver(tableConfig);
     InstancePartitions preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1083,10 +1085,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1186,10 +1188,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1278,10 +1280,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1373,10 +1375,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1478,10 +1480,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1584,10 +1586,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
     preConfigured = new InstancePartitions("preConfigured");
     preConfigured.setInstances(0, 0,
@@ -1677,10 +1679,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
 
     preConfigured = new InstancePartitions("preConfigured");
@@ -1751,10 +1753,10 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.MIRROR_SERVER_SET_PARTITION_SELECTOR.toString(), false)))
-        .setInstancePartitionsMap(Collections.singletonMap(InstancePartitionsType.OFFLINE, "preConfigured")).build();
+        .setInstancePartitionsMap(Map.of(InstancePartitionsType.OFFLINE, "preConfigured")).build();
     driver = new InstanceAssignmentDriver(tableConfig);
 
     preConfigured = new InstancePartitions("preConfigured");
@@ -1822,7 +1824,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = i / numInstancesPerPool;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -1833,7 +1835,7 @@ public class InstanceAssignmentTest {
     InstanceReplicaGroupPartitionConfig replicaPartitionConfig =
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, false, null);
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, false))).build();
     InstanceAssignmentDriver driver = new InstanceAssignmentDriver(tableConfig);
 
@@ -1862,7 +1864,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = numPools - 1;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -1886,7 +1888,7 @@ public class InstanceAssignmentTest {
 
     // Select all 3 pools in pool selection
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, false)));
 
     // Math.abs("myTable_OFFLINE".hashCode()) % 3 = 2
@@ -1908,7 +1910,7 @@ public class InstanceAssignmentTest {
 
     // Select pool 0 and 1 in pool selection
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 0, Arrays.asList(0, 1));
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, false)));
 
     // Math.abs("myTable_OFFLINE".hashCode()) % 2 = 0
@@ -1930,7 +1932,7 @@ public class InstanceAssignmentTest {
     // Assign instances from 2 pools to 3 replica-groups
     numReplicaGroups = numPools;
     replicaPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, false)));
 
     // Math.abs("myTable_OFFLINE".hashCode()) % 2 = 0
@@ -1960,7 +1962,7 @@ public class InstanceAssignmentTest {
     numPools = 2;
     replicaPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, true, null);
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
     // Reset the instance configs to have only two pools.
     instanceConfigs.clear();
@@ -1970,7 +1972,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = i / numInstancesPerPool;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -2009,7 +2011,7 @@ public class InstanceAssignmentTest {
 
     // Select pool 0 and 1 in pool selection
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 0, Arrays.asList(0, 1));
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
 
     // Get the latest existingInstancePartitions from last computation.
@@ -2036,7 +2038,7 @@ public class InstanceAssignmentTest {
     // Assign instances from 2 pools to 3 replica-groups
     numReplicaGroups = 3;
     replicaPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, true, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
 
     // Get the latest existingInstancePartitions from last computation.
@@ -2078,7 +2080,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = poolCount++;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -2115,7 +2117,7 @@ public class InstanceAssignmentTest {
     // Reduce number of replica groups from 3 to 2.
     numReplicaGroups = 2;
     replicaPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, true, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
 
     // Get the latest existingInstancePartitions from last computation.
@@ -2155,7 +2157,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = poolCount++;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -2226,7 +2228,7 @@ public class InstanceAssignmentTest {
       instanceConfig.addTag(OFFLINE_TAG);
       int pool = numPools - 1;
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -2253,7 +2255,7 @@ public class InstanceAssignmentTest {
 
     // Set tag pool config to 3.
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
 
     // Get the latest existingInstancePartitions from last computation.
@@ -2285,7 +2287,7 @@ public class InstanceAssignmentTest {
     // Set replica group from 2 to 3
     numReplicaGroups = 3;
     replicaPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, 0, 0, 0, true, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, null, true)));
 
     // Get the latest existingInstancePartitions from last computation.
@@ -2345,7 +2347,7 @@ public class InstanceAssignmentTest {
     InstanceTagPoolConfig tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, false, 0, null);
     InstanceReplicaGroupPartitionConfig replicaGroupPartitionConfig =
         new InstanceReplicaGroupPartitionConfig(false, 0, 0, 0, 0, 0, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // No instance with correct tag
@@ -2375,7 +2377,7 @@ public class InstanceAssignmentTest {
 
     // Enable pool
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 0, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // No instance has correct pool configured
@@ -2389,9 +2391,9 @@ public class InstanceAssignmentTest {
     for (int i = 0; i < numInstances; i++) {
       InstanceConfig instanceConfig = instanceConfigs.get(i);
       if (i < numInstances / 2) {
-        instanceConfig.getRecord().setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, "0"));
+        instanceConfig.getRecord().setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, "0"));
       } else {
-        instanceConfig.getRecord().setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, "1"));
+        instanceConfig.getRecord().setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, "1"));
       }
     }
 
@@ -2409,7 +2411,7 @@ public class InstanceAssignmentTest {
     assertEquals(instancePartitions.getInstances(0, 0), expectedInstances);
 
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 3, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for too many pools
@@ -2421,7 +2423,7 @@ public class InstanceAssignmentTest {
     }
 
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 0, Arrays.asList(0, 2));
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for pool that does not exist
@@ -2435,7 +2437,7 @@ public class InstanceAssignmentTest {
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, 0, null);
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(false, 6, 0, 0, 0, 0, false, null
     );
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for too many instances
@@ -2449,7 +2451,7 @@ public class InstanceAssignmentTest {
     // Enable replica-group
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, 0, 0, 0, 0, false, null
     );
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Number of replica-groups must be positive
@@ -2461,7 +2463,7 @@ public class InstanceAssignmentTest {
     }
 
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, 11, 0, 0, 0, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for too many replica-groups
@@ -2474,7 +2476,7 @@ public class InstanceAssignmentTest {
     }
 
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, 3, 3, 0, 0, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for too many instances
@@ -2486,7 +2488,7 @@ public class InstanceAssignmentTest {
     }
 
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, 3, 2, 0, 3, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Ask for too many instances per partition
@@ -2499,7 +2501,7 @@ public class InstanceAssignmentTest {
     }
 
     replicaGroupPartitionConfig = new InstanceReplicaGroupPartitionConfig(true, 0, 3, 2, 0, 0, false, null);
-    tableConfig.setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+    tableConfig.setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
         new InstanceAssignmentConfig(tagPoolConfig, null, replicaGroupPartitionConfig, null, false)));
 
     // Math.abs("myTable_OFFLINE".hashCode()) % 5 = 3
@@ -2529,7 +2531,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -2539,7 +2541,7 @@ public class InstanceAssignmentTest {
 
     try {
       tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-          .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+          .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
               new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig, "ILLEGAL_SELECTOR", false)))
           .build();
     } catch (IllegalArgumentException e) {
@@ -2560,7 +2562,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -2568,7 +2570,7 @@ public class InstanceAssignmentTest {
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, numInstancesPerReplicaGroup,
             0, 0, false, null);
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setInstanceAssignmentConfigMap(
-            Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
         .build();
@@ -2594,7 +2596,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -2602,7 +2604,7 @@ public class InstanceAssignmentTest {
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups,
             numInstancesPerReplicaGroup, 0, 0, false, null);
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setInstanceAssignmentConfigMap(
-            Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
         .build();
@@ -2626,7 +2628,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
 
@@ -2636,7 +2638,7 @@ public class InstanceAssignmentTest {
         new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + 10 + SERVER_INSTANCE_POOL_PREFIX + 0);
     instanceConfig.addTag(OFFLINE_TAG);
     instanceConfig.getRecord()
-        .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(0)));
+        .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(0)));
     instanceConfigs.add(instanceConfig);
 
     tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
@@ -2644,7 +2646,7 @@ public class InstanceAssignmentTest {
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups,
             numInstancesPerReplicaGroup, 0, 0, false, null);
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setInstanceAssignmentConfigMap(
-            Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
         .build();
@@ -2673,7 +2675,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -2683,7 +2685,7 @@ public class InstanceAssignmentTest {
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, numInstancesPerReplicaGroup, numPartitions,
             numInstancesPerPartition, false, null);
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
             new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                 InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
         .build();
@@ -2746,7 +2748,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -2756,7 +2758,7 @@ public class InstanceAssignmentTest {
         new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, numInstancesPerReplicaGroup, numPartitions,
             numInstancesPerPartition, true, null);
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setInstanceAssignmentConfigMap(
-            Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), true)))
         .build();
@@ -2825,7 +2827,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -2836,9 +2838,9 @@ public class InstanceAssignmentTest {
             numInstancesPerPartition, false, null);
     String partitionColumnName = "partition";
     SegmentPartitionConfig segmentPartitionConfig = new SegmentPartitionConfig(
-        Collections.singletonMap(partitionColumnName, new ColumnPartitionConfig("Modulo", numPartitionsSegment, null)));
+        Map.of(partitionColumnName, new ColumnPartitionConfig("Modulo", numPartitionsSegment, null)));
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setInstanceAssignmentConfigMap(
-            Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
         .setReplicaGroupStrategyConfig(new ReplicaGroupStrategyConfig(partitionColumnName, numInstancesPerReplicaGroup))
@@ -2898,7 +2900,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -2912,7 +2914,7 @@ public class InstanceAssignmentTest {
         new InstanceConstraintConfig(Arrays.asList("constraint1", "constraint2"));
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
             .build();
@@ -2955,7 +2957,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -2968,7 +2970,7 @@ public class InstanceAssignmentTest {
     instanceConstraintConfig = new InstanceConstraintConfig(Arrays.asList("constraint1", "constraint2"));
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), true)))
             .build();
@@ -3021,7 +3023,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + String.format("%02d", i) + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -3035,7 +3037,7 @@ public class InstanceAssignmentTest {
     // Do not rotate pool sequence (for testing)
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
             .build();
@@ -3087,7 +3089,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + String.format("%02d", i) + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -3101,7 +3103,7 @@ public class InstanceAssignmentTest {
     // Do not rotate pool sequence (for testing)
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), true)))
             .build();
@@ -3159,7 +3161,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -3172,7 +3174,7 @@ public class InstanceAssignmentTest {
     instanceConstraintConfig = new InstanceConstraintConfig(Arrays.asList("constraint1", "constraint2"));
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
             .build();
@@ -3209,7 +3211,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + String.format("%02d", i) + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -3223,7 +3225,7 @@ public class InstanceAssignmentTest {
     // Do not rotate pool sequence (for testing)
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
             .build();
@@ -3273,7 +3275,7 @@ public class InstanceAssignmentTest {
           new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + String.format("%02d", i) + SERVER_INSTANCE_POOL_PREFIX + pool);
       instanceConfig.addTag(OFFLINE_TAG);
       instanceConfig.getRecord()
-          .setMapField(InstanceUtils.POOL_KEY, Collections.singletonMap(OFFLINE_TAG, Integer.toString(pool)));
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
       instanceConfigs.add(instanceConfig);
     }
     // Use all pools
@@ -3287,7 +3289,7 @@ public class InstanceAssignmentTest {
     // Do not rotate pool sequence (for testing)
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME + TABLE_NAME_ZERO_HASH_COMPLEMENT)
-            .setInstanceAssignmentConfigMap(Collections.singletonMap(InstancePartitionsType.OFFLINE.toString(),
+            .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
                 new InstanceAssignmentConfig(tagPoolConfig, instanceConstraintConfig, replicaPartitionConfig,
                     InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), true)))
             .build();
@@ -3329,5 +3331,234 @@ public class InstanceAssignmentTest {
         Arrays.asList(SERVER_INSTANCE_ID_PREFIX + "10" + SERVER_INSTANCE_POOL_PREFIX + 0,
             SERVER_INSTANCE_ID_PREFIX + "11" + SERVER_INSTANCE_POOL_PREFIX + 1,
             SERVER_INSTANCE_ID_PREFIX + "17" + SERVER_INSTANCE_POOL_PREFIX + 2));
+  }
+
+  @Test
+  public void testPoolBasedFDAwareSteadyStateMinimizeDataMovement() {
+    // Test that a rebalance with minimizeDataMovement=true and no instance changes does not throw
+    // NoSuchElementException. This is a regression test for the case where all candidate instances are empty
+    // after preprocessing (no new instances added to any pool).
+
+    // 21 instances in 5 pools, with [5,4,4,4,4] instances in each pool
+    int numInstances = 21;
+    int numPools = 5;
+    int numReplicaGroups = 3;
+    int numInstancesPerReplicaGroup = numInstances / numReplicaGroups;
+    List<InstanceConfig> instanceConfigs = new ArrayList<>(numInstances);
+    for (int i = 0; i < numInstances; i++) {
+      int pool = i % numPools;
+      InstanceConfig instanceConfig =
+          new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i + SERVER_INSTANCE_POOL_PREFIX + pool);
+      instanceConfig.addTag(OFFLINE_TAG);
+      instanceConfig.getRecord()
+          .setMapField(InstanceUtils.POOL_KEY, Map.of(OFFLINE_TAG, Integer.toString(pool)));
+      instanceConfigs.add(instanceConfig);
+    }
+
+    // Initial assignment (no minimize data movement, no existing partitions)
+    InstanceTagPoolConfig tagPoolConfig = new InstanceTagPoolConfig(OFFLINE_TAG, true, numPools, null);
+    InstanceReplicaGroupPartitionConfig replicaPartitionConfig =
+        new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, numInstancesPerReplicaGroup, 0, 0, false,
+            null);
+    TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
+            new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
+                InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), false)))
+        .build();
+    InstanceAssignmentDriver driver = new InstanceAssignmentDriver(tableConfig);
+    InstancePartitions initialPartitions =
+        driver.assignInstances(InstancePartitionsType.OFFLINE, instanceConfigs, null);
+    assertEquals(initialPartitions.getNumReplicaGroups(), numReplicaGroups);
+    assertEquals(initialPartitions.getNumPartitions(), 1);
+
+    // Now re-run with the same instances and minimizeDataMovement=true, passing existing partitions.
+    // Before the fix in #17799, this would throw NoSuchElementException because CandidateQueue was created with an
+    // empty map (all existing instances were removed from candidates during preprocessing, leaving empty sets).
+    replicaPartitionConfig =
+        new InstanceReplicaGroupPartitionConfig(true, 0, numReplicaGroups, numInstancesPerReplicaGroup, 0, 0, true,
+            null);
+    tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.OFFLINE.toString(),
+            new InstanceAssignmentConfig(tagPoolConfig, null, replicaPartitionConfig,
+                InstanceAssignmentConfig.PartitionSelector.FD_AWARE_INSTANCE_PARTITION_SELECTOR.toString(), true)))
+        .build();
+    driver = new InstanceAssignmentDriver(tableConfig);
+    InstancePartitions steadyStatePartitions =
+        driver.assignInstances(InstancePartitionsType.OFFLINE, instanceConfigs, initialPartitions);
+
+    // Assignment should be unchanged
+    assertEquals(steadyStatePartitions.getNumReplicaGroups(), numReplicaGroups);
+    assertEquals(steadyStatePartitions.getNumPartitions(), 1);
+    for (int rg = 0; rg < numReplicaGroups; rg++) {
+      assertEquals(steadyStatePartitions.getInstances(0, rg), initialPartitions.getInstances(0, rg));
+    }
+  }
+  /// Verifies that subset-partition tables use the total Kafka partition count (not the subset size)
+  /// for instance assignment, producing the same server spread as a normal full-partition table.
+  ///
+  /// **Topology:** 2 Kafka topic partitions, 4 servers, 2 replica groups,
+  /// 1 instance per partition per replica group.
+  ///
+  /// - Table A has `stream.kafka.partition.ids = "0"` (consumes only Kafka partition 0)
+  /// - Table B has `stream.kafka.partition.ids = "1"` (consumes only Kafka partition 1)
+  ///
+  /// The [ImplicitRealtimeTablePartitionSelector] always fetches the _total_
+  /// Kafka partition count from [StreamMetadataProvider#fetchPartitionCount] (= 2). This
+  /// produces an instance map with **two distinct slots** so that
+  /// [org.apache.pinot.controller.helix.core.assignment.segment.RealtimeSegmentAssignment] routes
+  /// Kafka partition 0 → slot 0 and Kafka partition 1 → slot 1, each backed by different servers.
+  ///
+  /// Without this behaviour (`numPartitions = subsetSize = 1`), only slot 0 exists, and
+  /// the assignment computes `kafkaPartitionId % 1 = 0` for _every_ Kafka partition,
+  /// routing all consuming segments to the same slot-0 servers — a hotspot on lower-indexed servers.
+  ///
+  /// **Pre-computed hash rotations** (used for exact expected server values):
+  ///
+  /// ```
+  /// Math.abs("subsetTablePartition0_REALTIME".hashCode()) % 4 = 0  →  no rotation
+  /// Pool after rotation: [s0, s1, s2, s3]
+  /// Round-robin to 2 RGs:  RG0=[s0,s2],  RG1=[s1,s3]
+  ///   slot 0: RG0=s0, RG1=s1   |   slot 1: RG0=s2, RG1=s3
+  ///
+  /// Math.abs("subsetTablePartition1_REALTIME".hashCode()) % 4 = 1  →  rotate by 1
+  /// Pool after rotation: [s1, s2, s3, s0]
+  /// Round-robin to 2 RGs:  RG0=[s1,s3],  RG1=[s2,s0]
+  ///   slot 0: RG0=s1, RG1=s2   |   slot 1: RG0=s3, RG1=s0
+  /// ```
+  @Test
+  public void testSubsetPartitionInstanceAssignmentNoHotspot() {
+    final int numReplicas = 2;
+    final int numKafkaPartitions = 2;   // total Kafka topic partition count
+    final int numServers = 4;
+    final int numInstancesPerReplicaGroup = numServers / numReplicas; // = 2
+
+    // 4 servers, single pool (non-pool-based), sorted lexicographically:
+    //   [Server_localhost_0, Server_localhost_1, Server_localhost_2, Server_localhost_3]
+    List<InstanceConfig> instanceConfigs = new ArrayList<>(numServers);
+    for (int i = 0; i < numServers; i++) {
+      InstanceConfig cfg = new InstanceConfig(SERVER_INSTANCE_ID_PREFIX + i);
+      cfg.addTag(REALTIME_TAG);
+      instanceConfigs.add(cfg);
+    }
+
+    // The mock always returns 2 (total topic partition count) regardless of the configured subset.
+    StreamMetadataProvider streamMetadataProvider = mock(StreamMetadataProvider.class);
+    when(streamMetadataProvider.fetchPartitionCount(anyLong())).thenReturn(numKafkaPartitions);
+
+    InstanceReplicaGroupPartitionConfig rgConfig = new InstanceReplicaGroupPartitionConfig(
+        true, 0, numReplicas, numInstancesPerReplicaGroup, 0, 0, false, null);
+    InstanceAssignmentConfig instanceAssignmentConfig = new InstanceAssignmentConfig(
+        new InstanceTagPoolConfig(REALTIME_TAG, false, 0, null), null, rgConfig,
+        InstanceAssignmentConfig.PartitionSelector.IMPLICIT_REALTIME_TABLE_PARTITION_SELECTOR.name(), false);
+
+    // ── Table A: assigned subset {partition 0} ───────────────────────────────────────────────
+    // Hash rotation = 0  →  pool [s0,s1,s2,s3] unchanged.
+    // Round-robin → RG0=[s0,s2], RG1=[s1,s3]; 1 instance/partition (ImplicitSelector enforces):
+    //   slot 0: RG0=s0, RG1=s1
+    //   slot 1: RG0=s2, RG1=s3
+    String tableAName = "subsetTablePartition0";
+    TableConfig tableAConfig = new TableConfigBuilder(TableType.REALTIME)
+        .setTableName(tableAName).setServerTenant(TENANT_NAME).setNumReplicas(numReplicas)
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.CONSUMING.name(), instanceAssignmentConfig))
+        .build();
+    InstancePartitions tableAPartitions = new InstanceAssignmentDriver(tableAConfig)
+        .getInstancePartitions(
+            InstancePartitionsType.CONSUMING.getInstancePartitionsName(tableAName),
+            instanceAssignmentConfig, instanceConfigs, null, false,
+            new ImplicitRealtimeTablePartitionSelector(rgConfig, tableAConfig.getTableName(), null, false,
+                streamMetadataProvider));
+
+    // Key correctness check: total Kafka partition count (2) must be used, not subset size (1).
+    assertEquals(tableAPartitions.getNumPartitions(), numKafkaPartitions,
+        "Table A must use total Kafka partition count, not subset size");
+    assertEquals(tableAPartitions.getNumReplicaGroups(), numReplicas);
+    // slot 0 (Kafka partition 0 → 0 % 2 = 0)
+    assertEquals(tableAPartitions.getInstances(0, 0), List.of(SERVER_INSTANCE_ID_PREFIX + 0));
+    assertEquals(tableAPartitions.getInstances(0, 1), List.of(SERVER_INSTANCE_ID_PREFIX + 1));
+    // slot 1 (Kafka partition 1 → 1 % 2 = 1, if it were consumed here)
+    assertEquals(tableAPartitions.getInstances(1, 0), List.of(SERVER_INSTANCE_ID_PREFIX + 2));
+    assertEquals(tableAPartitions.getInstances(1, 1), List.of(SERVER_INSTANCE_ID_PREFIX + 3));
+
+    // ── Table B: assigned subset {partition 1} ───────────────────────────────────────────────
+    // Hash rotation = 1  →  rotated pool [s1,s2,s3,s0].
+    // Round-robin → RG0=[s1,s3], RG1=[s2,s0]; 1 instance/partition:
+    //   slot 0: RG0=s1, RG1=s2
+    //   slot 1: RG0=s3, RG1=s0
+    String tableBName = "subsetTablePartition1";
+    TableConfig tableBConfig = new TableConfigBuilder(TableType.REALTIME)
+        .setTableName(tableBName).setServerTenant(TENANT_NAME).setNumReplicas(numReplicas)
+        .setInstanceAssignmentConfigMap(Map.of(InstancePartitionsType.CONSUMING.name(), instanceAssignmentConfig))
+        .build();
+    InstancePartitions tableBPartitions = new InstanceAssignmentDriver(tableBConfig)
+        .getInstancePartitions(
+            InstancePartitionsType.CONSUMING.getInstancePartitionsName(tableBName),
+            instanceAssignmentConfig, instanceConfigs, null, false,
+            new ImplicitRealtimeTablePartitionSelector(rgConfig, tableBConfig.getTableName(), null, false,
+                streamMetadataProvider));
+
+    assertEquals(tableBPartitions.getNumPartitions(), numKafkaPartitions,
+        "Table B must use total Kafka partition count, not subset size");
+    assertEquals(tableBPartitions.getNumReplicaGroups(), numReplicas);
+    assertEquals(tableBPartitions.getInstances(0, 0), List.of(SERVER_INSTANCE_ID_PREFIX + 1));
+    assertEquals(tableBPartitions.getInstances(0, 1), List.of(SERVER_INSTANCE_ID_PREFIX + 2));
+    // slot 1 (Kafka partition 1 → 1 % 2 = 1)
+    assertEquals(tableBPartitions.getInstances(1, 0), List.of(SERVER_INSTANCE_ID_PREFIX + 3));
+    assertEquals(tableBPartitions.getInstances(1, 1), List.of(SERVER_INSTANCE_ID_PREFIX + 0));
+
+    // ── Anti-hotspot: within each table, slot 0 and slot 1 use disjoint servers ───────────────
+    // RealtimeSegmentAssignment routes: Kafka partition X → slot = X % numPartitions.
+    // With numPartitions=2, slot 0 and slot 1 are guaranteed to be on different servers,
+    // so different Kafka partitions do NOT share consuming instances within the same table.
+    Set<String> tableASlot0 = new HashSet<>(tableAPartitions.getInstances(0, 0));
+    tableASlot0.addAll(tableAPartitions.getInstances(0, 1));
+    Set<String> tableASlot1 = new HashSet<>(tableAPartitions.getInstances(1, 0));
+    tableASlot1.addAll(tableAPartitions.getInstances(1, 1));
+    assertTrue(Collections.disjoint(tableASlot0, tableASlot1),
+        "Table A: slot 0 and slot 1 must be on disjoint servers (no intra-table hotspot)");
+
+    Set<String> tableBSlot0 = new HashSet<>(tableBPartitions.getInstances(0, 0));
+    tableBSlot0.addAll(tableBPartitions.getInstances(0, 1));
+    Set<String> tableBSlot1 = new HashSet<>(tableBPartitions.getInstances(1, 0));
+    tableBSlot1.addAll(tableBPartitions.getInstances(1, 1));
+    assertTrue(Collections.disjoint(tableBSlot0, tableBSlot1),
+        "Table B: slot 0 and slot 1 must be on disjoint servers (no intra-table hotspot)");
+
+    // Each table spreads load evenly: 2 slots × 2 replica groups = all 4 servers.
+    Set<String> tableAAll = new HashSet<>(tableASlot0);
+    tableAAll.addAll(tableASlot1);
+    assertEquals(tableAAll.size(), numServers,
+        "Table A must use all " + numServers + " servers");
+    Set<String> tableBAll = new HashSet<>(tableBSlot0);
+    tableBAll.addAll(tableBSlot1);
+    assertEquals(tableBAll.size(), numServers,
+        "Table B must use all " + numServers + " servers");
+
+    // ── Negative case: numPartitions = 1 (wrong: uses subset size instead of total count) ─────
+    // With InstanceReplicaGroupPartitionSelector (bypasses stream-count lookup), numPartitions=1.
+    // Only slot 0 exists in the instance map.  RealtimeSegmentAssignment then computes:
+    //   Kafka partition 1 → 1 % 1 = 0 → slot 0  (same as partition 0 → HOTSPOT)
+    InstanceReplicaGroupPartitionConfig wrongRgConfig = new InstanceReplicaGroupPartitionConfig(
+        true, 0, numReplicas, numInstancesPerReplicaGroup, 1 /* wrong: subset size */, 1, false, null);
+
+    // Table B wrong assignment (rotation=1): only slot 0  →  RG0=s1, RG1=s2.
+    InstancePartitions wrongTableBPartitions = new InstanceAssignmentDriver(tableBConfig)
+        .getInstancePartitions(
+            InstancePartitionsType.CONSUMING.getInstancePartitionsName(tableBName),
+            instanceAssignmentConfig, instanceConfigs, null, false,
+            new InstanceReplicaGroupPartitionSelector(wrongRgConfig, tableBConfig.getTableName(), null, false));
+
+    // Wrong approach: only slot 0 exists; slot 1 is missing entirely.
+    assertEquals(wrongTableBPartitions.getNumPartitions(), 1,
+        "Wrong approach produces only 1 partition slot");
+    assertNull(wrongTableBPartitions.getInstances(1, 0),
+        "Slot 1 must not exist when numPartitions=1; Kafka partition 1 falls back to slot 0 via 1 % 1 = 0");
+
+    // Under the wrong approach, Kafka partition 1 would be routed to slot 0 (RG0 → s1).
+    // Under the correct approach, it routes to slot 1 (RG0 → s3).  These are different servers.
+    String wrongServerForP1 = wrongTableBPartitions.getInstances(0, 0).get(0); // s1 (slot-0 hotspot)
+    String correctServerForP1 = tableBPartitions.getInstances(1, 0).get(0);    // s3 (slot 1)
+    assertNotEquals(wrongServerForP1, correctServerForP1,
+        "Wrong approach routes Kafka partition 1 to '" + wrongServerForP1
+            + "' (slot-0 hotspot) instead of the correct '" + correctServerForP1 + "' (slot 1)");
   }
 }
