@@ -18,13 +18,13 @@
  */
 package org.apache.pinot.controller.helix.core.realtime;
 
-import java.util.Collections;
 import java.util.Map;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
 import org.apache.pinot.common.utils.LLCSegmentName;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.stream.LongMsgOffset;
 import org.apache.pinot.spi.stream.LongMsgOffsetFactory;
+import org.apache.pinot.spi.utils.CommonConstants;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.Test;
@@ -55,7 +55,7 @@ public class SegmentCompletionFSMFactoryTest {
 
   @Test
   public void testCreateFSMWithDefaultFsm() {
-    PinotConfiguration pinotConfiguration = new PinotConfiguration(Collections.emptyMap());
+    PinotConfiguration pinotConfiguration = new PinotConfiguration(Map.of());
     SegmentCompletionConfig segmentCompletionConfig = new SegmentCompletionConfig(pinotConfiguration);
     SegmentCompletionFSMFactory.init(segmentCompletionConfig);
 
@@ -69,6 +69,11 @@ public class SegmentCompletionFSMFactoryTest {
     SegmentZKMetadata segmentZKMetadata = mock(SegmentZKMetadata.class);
     when(segmentZKMetadata.getNumReplicas()).thenReturn(3);
     when(segmentZKMetadata.getEndOffset()).thenReturn("100");
+    if (Math.random() < 0.5) {
+      when(segmentZKMetadata.getStatus()).thenReturn(CommonConstants.Segment.Realtime.Status.IN_PROGRESS);
+    } else {
+      when(segmentZKMetadata.getStatus()).thenReturn(CommonConstants.Segment.Realtime.Status.DONE);
+    }
 
     PinotLLCRealtimeSegmentManager pinotLLCRealtimeSegmentManager = mock(PinotLLCRealtimeSegmentManager.class);
     when(pinotLLCRealtimeSegmentManager.getCommitTimeoutMS(anyString())).thenReturn(System.currentTimeMillis());
@@ -108,6 +113,11 @@ public class SegmentCompletionFSMFactoryTest {
     SegmentZKMetadata segmentZKMetadata = mock(SegmentZKMetadata.class);
     when(segmentZKMetadata.getNumReplicas()).thenReturn(3);
     when(segmentZKMetadata.getEndOffset()).thenReturn("100");
+    if (Math.random() < 0.5) {
+      when(segmentZKMetadata.getStatus()).thenReturn(CommonConstants.Segment.Realtime.Status.DONE);
+    } else {
+      when(segmentZKMetadata.getStatus()).thenReturn(CommonConstants.Segment.Realtime.Status.COMMITTING);
+    }
 
     PinotLLCRealtimeSegmentManager pinotLLCRealtimeSegmentManager = mock(PinotLLCRealtimeSegmentManager.class);
     when(pinotLLCRealtimeSegmentManager.getCommitTimeoutMS(anyString())).thenReturn(System.currentTimeMillis());
