@@ -17,9 +17,7 @@
  * under the License.
  */
 package org.apache.pinot.controller.helix.core.rebalance;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.util.concurrent.MoreExecutors;
 import java.util.HashMap;
@@ -37,6 +35,10 @@ import org.apache.helix.store.zk.ZkHelixPropertyStore;
 import org.apache.helix.zookeeper.datamodel.ZNRecord;
 import org.apache.pinot.common.metadata.ZKMetadataProvider;
 import org.apache.pinot.common.metrics.ControllerMetrics;
+import org.apache.pinot.common.restlet.resources.RebalanceConfig;
+import org.apache.pinot.common.restlet.resources.RebalanceResult;
+import org.apache.pinot.common.restlet.resources.TableRebalanceContext;
+import org.apache.pinot.common.restlet.resources.TableRebalanceProgressStats;
 import org.apache.pinot.controller.ControllerConf;
 import org.apache.pinot.controller.LeadControllerManager;
 import org.apache.pinot.controller.helix.core.PinotHelixResourceManager;
@@ -379,16 +381,16 @@ public class RebalanceCheckerTest {
     pinotHelixManager.start(helixZkManager, null);
 
     pinotHelixManager.addControllerJobToZK("job1",
-        ImmutableMap.of("jobId", "job1", "submissionTimeMs", "1000", "tableName", "table01"),
+        Map.of("jobId", "job1", "submissionTimeMs", "1000", "tableName", "table01"),
         ControllerJobTypes.TABLE_REBALANCE, jmd -> true);
     pinotHelixManager.addControllerJobToZK("job2",
-        ImmutableMap.of("jobId", "job2", "submissionTimeMs", "2000", "tableName", "table01"),
+        Map.of("jobId", "job2", "submissionTimeMs", "2000", "tableName", "table01"),
         ControllerJobTypes.TABLE_REBALANCE, jmd -> false);
     pinotHelixManager.addControllerJobToZK("job3",
-        ImmutableMap.of("jobId", "job3", "submissionTimeMs", "3000", "tableName", "table02"),
+        Map.of("jobId", "job3", "submissionTimeMs", "3000", "tableName", "table02"),
         ControllerJobTypes.TABLE_REBALANCE, jmd -> true);
     pinotHelixManager.addControllerJobToZK("job4",
-        ImmutableMap.of("jobId", "job4", "submissionTimeMs", "4000", "tableName", "table02"),
+        Map.of("jobId", "job4", "submissionTimeMs", "4000", "tableName", "table02"),
         ControllerJobTypes.TABLE_REBALANCE, jmd -> true);
     Map<String, Map<String, String>> jmds = jobsZnRecord.getMapFields();
     assertEquals(jmds.size(), 3);
