@@ -19,7 +19,6 @@
 package org.apache.pinot.core.operator.filter;
 
 import com.google.common.base.CaseFormat;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -75,7 +74,7 @@ public class ExpressionFilterOperator extends BaseFilterOperator {
     } else {
       _predicateEvaluator =
           PredicateEvaluatorProvider.getPredicateEvaluator(predicate, _transformFunction.getDictionary(),
-              _transformFunction.getResultMetadata().getDataType());
+              _transformFunction.getResultMetadata().getDataType(), _queryContext);
     }
   }
 
@@ -111,7 +110,7 @@ public class ExpressionFilterOperator extends BaseFilterOperator {
 
   @Override
   public List<Operator<?>> getChildOperators() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
