@@ -20,7 +20,6 @@ package org.apache.pinot.core.operator.filter;
 
 import com.google.common.base.CaseFormat;
 import com.google.common.base.Preconditions;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.core.common.BlockDocIdIterator;
 import org.apache.pinot.core.common.BlockDocIdSet;
@@ -59,16 +58,17 @@ public class ScanBasedFilterOperator extends BaseColumnFilterOperator {
   protected BlockDocIdSet getNextBlockWithoutNullHandling() {
     DataSourceMetadata dataSourceMetadata = _dataSource.getDataSourceMetadata();
     if (dataSourceMetadata.isSingleValue()) {
-      return new SVScanDocIdSet(_predicateEvaluator, _dataSource, _numDocs, _batchSize);
+      return new SVScanDocIdSet(_predicateEvaluator, _dataSource, _numDocs, _batchSize,
+          _queryContext.getQueryOptions());
     } else {
-      return new MVScanDocIdSet(_predicateEvaluator, _dataSource, _numDocs);
+      return new MVScanDocIdSet(_predicateEvaluator, _dataSource, _numDocs, _queryContext.getQueryOptions());
     }
   }
 
 
   @Override
   public List<Operator> getChildOperators() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
@@ -91,10 +91,8 @@ public class ScanBasedFilterOperator extends BaseColumnFilterOperator {
     attributeBuilder.putString("predicate", _predicateEvaluator.getPredicate().toString());
   }
 
-  /**
-   * Returns the metadata of the data source associated with the scan filter.
-   * TODO: Replace this with a priority method for all filter operators
-   */
+  /// Returns the metadata of the data source associated with the scan filter.
+  /// TODO: Replace this with a priority method for all filter operators
   public DataSourceMetadata getDataSourceMetadata() {
     return _dataSource.getDataSourceMetadata();
   }
