@@ -22,7 +22,6 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -76,13 +75,11 @@ import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
 
 
-/**
- * The {@code BaseStarTreeV2Test} is the base class to test star-tree index by scanning and aggregating records filtered
- * out from the {@link StarTreeFilterPlanNode} against normal {@link FilterPlanNode}.
- *
- * @param <R> Type or raw value
- * @param <A> Type of aggregated value
- */
+/// The `BaseStarTreeV2Test` is the base class to test star-tree index by scanning and aggregating records
+/// filtered out from the [StarTreeFilterPlanNode] against normal [FilterPlanNode].
+///
+/// @param <R> Type or raw value
+/// @param <A> Type of aggregated value
 @SuppressWarnings({"rawtypes", "unchecked"})
 abstract class BaseStarTreeV2Test<R, A> {
   private static final Random RANDOM = new Random();
@@ -98,7 +95,7 @@ abstract class BaseStarTreeV2Test<R, A> {
   private static final String DIMENSION1 = "d1__COLUMN_NAME";
   private static final String DIMENSION2 = "DISTINCTCOUNTRAWHLL__d2";
   private static final int DIMENSION_CARDINALITY = 100;
-  private static final String METRIC = "m";
+  private static final String AGG_COL = "m";
 
   // Supported filters
   private static final String QUERY_FILTER_AND = String.format(" WHERE %1$s = 0 AND %2$s < 10", DIMENSION1, DIMENSION2);
@@ -151,7 +148,8 @@ abstract class BaseStarTreeV2Test<R, A> {
     DataType rawValueType = getRawValueType();
     // Raw value type will be null for COUNT aggregation function
     if (rawValueType != null) {
-      schemaBuilder.addMetric(METRIC, rawValueType);
+      schemaBuilder.addDimensionField(AGG_COL, rawValueType,
+              dimensionFieldSpec -> dimensionFieldSpec.setSingleValueField(isAggColSingleValueField()));
     }
     Schema schema = schemaBuilder.build();
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
@@ -162,7 +160,7 @@ abstract class BaseStarTreeV2Test<R, A> {
       segmentRecord.putValue(DIMENSION1, RANDOM.nextInt(DIMENSION_CARDINALITY));
       segmentRecord.putValue(DIMENSION2, RANDOM.nextInt(DIMENSION_CARDINALITY));
       if (rawValueType != null) {
-        segmentRecord.putValue(METRIC, getRandomRawValue(RANDOM));
+        segmentRecord.putValue(AGG_COL, getRandomRawValue(RANDOM));
       }
       segmentRecords.add(segmentRecord);
     }
@@ -175,13 +173,14 @@ abstract class BaseStarTreeV2Test<R, A> {
     driver.build();
 
     StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(Arrays.asList(DIMENSION1, DIMENSION2), null, null,
-        Collections.singletonList(new StarTreeAggregationConfig(METRIC, _valueAggregator.getAggregationType().getName(),
-            null, getCompressionCodec(), true, getIndexVersion(), null, null)), MAX_LEAF_RECORDS);
+        List.of(new StarTreeAggregationConfig(AGG_COL,
+                _valueAggregator.getAggregationType().getName(), null, getCompressionCodec(),
+                true, getIndexVersion(), null, null)), MAX_LEAF_RECORDS);
     File indexDir = new File(TEMP_DIR, SEGMENT_NAME);
     // Randomly build star-tree using on-heap or off-heap mode
     MultipleTreesBuilder.BuildMode buildMode =
         RANDOM.nextBoolean() ? MultipleTreesBuilder.BuildMode.ON_HEAP : MultipleTreesBuilder.BuildMode.OFF_HEAP;
-    try (MultipleTreesBuilder builder = new MultipleTreesBuilder(Collections.singletonList(starTreeIndexConfig), false,
+    try (MultipleTreesBuilder builder = new MultipleTreesBuilder(List.of(starTreeIndexConfig), false,
         indexDir, buildMode)) {
       builder.build();
     }
@@ -196,9 +195,9 @@ abstract class BaseStarTreeV2Test<R, A> {
     } else if (aggregationType == AggregationFunctionType.PERCENTILEEST
         || aggregationType == AggregationFunctionType.PERCENTILETDIGEST) {
       // Append a percentile number for percentile functions
-      return String.format("%s(%s, 50)", aggregationType.getName(), METRIC);
+      return String.format("%s(%s, 50)", aggregationType.getName(), AGG_COL);
     } else {
-      return String.format("%s(%s)", aggregationType.getName(), METRIC);
+      return String.format("%s(%s)", aggregationType.getName(), AGG_COL);
     }
   }
 
@@ -476,12 +475,19 @@ abstract class BaseStarTreeV2Test<R, A> {
 
   private Object getNextRawValue(int docId, ForwardIndexReader reader, ForwardIndexReaderContext readerContext,
       Dictionary dictionary) {
-    return dictionary.get(reader.getDictId(docId, readerContext));
+    if (isAggColSingleValueField()) {
+      return dictionary.get(reader.getDictId(docId, readerContext));
+    } else {
+      int[] dictIds = reader.getDictIdMV(docId, readerContext);
+      Object[] rawValue = new Object[dictIds.length];
+      for (int i = 0; i < dictIds.length; i++) {
+        rawValue[i] = dictionary.get(dictIds[i]);
+      }
+      return rawValue;
+    }
   }
 
-  /**
-   * Can be overridden to force the compression codec.
-   */
+  /// Can be overridden to force the compression codec.
   @Nullable
   CompressionCodec getCompressionCodec() {
     CompressionCodec[] compressionCodecs = CompressionCodec.values();
@@ -489,14 +495,16 @@ abstract class BaseStarTreeV2Test<R, A> {
     return compressionCodec.isApplicableToRawIndex() ? compressionCodec : null;
   }
 
-  /**
-   * Can be overridden to force the index version.
-   */
+  /// Can be overridden to force the index version.
   @Nullable
   Integer getIndexVersion() {
     // Allow 2, 3, 4 or null
     int version = 1 + RANDOM.nextInt(4);
     return version > 1 ? version : null;
+  }
+
+  protected boolean isAggColSingleValueField() {
+    return true;
   }
 
   abstract ValueAggregator<R, A> getValueAggregator();
