@@ -20,32 +20,28 @@ package org.apache.pinot.integration.tests;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import java.io.IOException;
-import java.net.URL;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import javax.ws.rs.core.Response;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.pinot.common.exception.HttpErrorStatusException;
+import org.apache.pinot.client.admin.PinotAdminNotFoundException;
+import org.apache.pinot.common.restlet.resources.PinotTableReloadStatusResponse;
+import org.apache.pinot.common.restlet.resources.RebalanceConfig;
+import org.apache.pinot.common.restlet.resources.RebalancePreCheckerResult;
+import org.apache.pinot.common.restlet.resources.RebalanceResult;
+import org.apache.pinot.common.restlet.resources.RebalanceSummaryResult;
+import org.apache.pinot.common.restlet.resources.TableRebalanceProgressStats;
 import org.apache.pinot.common.tier.TierFactory;
-import org.apache.pinot.common.utils.SimpleHttpResponse;
 import org.apache.pinot.common.utils.config.TagNameUtils;
-import org.apache.pinot.common.utils.http.HttpClient;
 import org.apache.pinot.common.utils.regex.JavaUtilPattern;
 import org.apache.pinot.common.utils.regex.Matcher;
 import org.apache.pinot.common.utils.regex.Pattern;
 import org.apache.pinot.controller.ControllerConf;
-import org.apache.pinot.controller.api.resources.ServerReloadControllerJobStatusResponse;
 import org.apache.pinot.controller.helix.core.controllerjob.ControllerJobTypes;
 import org.apache.pinot.controller.helix.core.rebalance.DefaultRebalancePreChecker;
-import org.apache.pinot.controller.helix.core.rebalance.RebalanceConfig;
 import org.apache.pinot.controller.helix.core.rebalance.RebalanceJobConstants;
-import org.apache.pinot.controller.helix.core.rebalance.RebalancePreCheckerResult;
-import org.apache.pinot.controller.helix.core.rebalance.RebalanceResult;
-import org.apache.pinot.controller.helix.core.rebalance.RebalanceSummaryResult;
-import org.apache.pinot.controller.helix.core.rebalance.TableRebalanceProgressStats;
 import org.apache.pinot.controller.helix.core.rebalance.TableRebalancer;
 import org.apache.pinot.controller.helix.core.util.ControllerZkHelixUtils;
 import org.apache.pinot.server.starter.helix.BaseServerStarter;
@@ -66,7 +62,6 @@ import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.spi.utils.Enablement;
 import org.apache.pinot.spi.utils.JsonUtils;
-import org.apache.pinot.spi.utils.StringUtil;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 import org.apache.pinot.util.TestUtils;
 import org.testng.Assert;
@@ -89,8 +84,8 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
   public void testImplicitRealtimeTableInstanceAssignment()
       throws Exception {
     // Instance assignment not configured for the table initially, so INSTANCE_PARTITIONS should not exist.
-    assertThrows("404", IOException.class,
-        () -> sendGetRequest(getControllerBaseApiUrl() + "/tables/" + getTableName() + "/instancePartitions"));
+    assertThrows(PinotAdminNotFoundException.class,
+        () -> getOrCreateAdminClient().getTableClient().getInstancePartitions(getTableName(), null));
 
     // Update table config with instance assignment config, use IMPLICIT_REALTIME_TABLE_PARTITION_SELECTOR to
     // create partitions in the replica group based on the number of stream partitions.
@@ -108,7 +103,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setReassignInstances(true);
     rebalanceConfig.setMinAvailableReplicas(-1);
     rebalanceConfig.setIncludeConsuming(true);
-    sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
+    triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
 
     // We're using IMPLICIT_REALTIME_TABLE_PARTITION_SELECTOR based instance assignment for this table.
     // This test verifies that INSTANCE_PARTITIONS is written to ZK after instance assignment in the rebalance and has
@@ -117,7 +112,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TestUtils.waitForCondition(
         aVoid -> {
           try {
-            sendGetRequest(getControllerBaseApiUrl() + "/tables/" + getTableName() + "/instancePartitions");
+            getOrCreateAdminClient().getTableClient().getInstancePartitions(getTableName(), null);
           } catch (Exception e) {
             return false;
           }
@@ -126,7 +121,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     );
 
     JsonNode instancePartitions = JsonUtils.stringToJsonNode(
-        sendGetRequest(getControllerBaseApiUrl() + "/tables/" + getTableName() + "/instancePartitions"));
+        getOrCreateAdminClient().getTableClient().getInstancePartitions(getTableName(), null));
 
     assertNotNull(instancePartitions);
     assertEquals(instancePartitions.size(), 1);
@@ -141,15 +136,16 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Reset the table config and rebalance
     updateTableConfig(getTableConfigBuilder(TableType.REALTIME).build());
-    sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
+    triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
 
     TestUtils.waitForCondition(
         aVoid -> {
           try {
-            sendGetRequest(getControllerBaseApiUrl() + "/tables/" + getTableName() + "/instancePartitions");
+            getOrCreateAdminClient().getTableClient().getInstancePartitions(getTableName(), null);
+          } catch (PinotAdminNotFoundException e) {
+            return true;
           } catch (Exception e) {
-            return e.getCause() instanceof HttpErrorStatusException
-                && ((HttpErrorStatusException) e.getCause()).getStatusCode() == 404;
+            return false;
           }
           return false;
         }, 10_000,
@@ -169,14 +165,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TableConfig originalTableConfig = new TableConfig(tableConfig);
 
     // Ensure pre-check status is null if not enabled
-    String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     assertNull(rebalanceResult.getPreChecksResult());
 
     rebalanceConfig.setPreChecks(true);
     rebalanceConfig.setIncludeConsuming(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -188,14 +182,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Use MinimizeDataMovementOptions.DEFAULT and disable it in table config for COMPLETED ONLY
     Map<String, InstanceAssignmentConfig> instanceAssignmentConfigMap =
-        Collections.singletonMap("COMPLETED", createInstanceAssignmentConfig(false, TableType.REALTIME));
+        Map.of("COMPLETED", createInstanceAssignmentConfig(false, TableType.REALTIME));
     InstanceReplicaGroupPartitionConfig replicaGroupPartitionConfig =
         instanceAssignmentConfigMap.get("COMPLETED").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is not enabled for COMPLETED segments, but instance assignment is allowed",
         RebalancePreCheckerResult.PreCheckStatus.WARN, "No need to reload",
@@ -211,15 +204,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // response will be the same for MinimizeDataMovementOptions.DISABLE and MinimizeDataMovementOptions.DEFAULT in
     // this case
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    assertEquals(JsonUtils.stringToObject(response, RebalanceResult.class)
+    assertEquals(triggerTableRebalance(rebalanceConfig, TableType.REALTIME)
             .getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage(),
         rebalanceResult.getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage());
 
     // Use MinimizeDataMovementOptions.ENABLE
     rebalanceConfig.setMinimizeDataMovement(Enablement.ENABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -233,13 +224,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
         RebalancePreCheckerResult.PreCheckStatus.WARN);
 
     instanceAssignmentConfigMap =
-        Collections.singletonMap("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
+        Map.of("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("COMPLETED").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled for COMPLETED segments in table config but it's overridden with disabled",
         RebalancePreCheckerResult.PreCheckStatus.WARN, "No need to reload",
@@ -254,13 +244,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Use MinimizeDataMovementOptions.DEFAULT and disable it in table config for CONSUMING ONLY
     instanceAssignmentConfigMap =
-        Collections.singletonMap("CONSUMING", createInstanceAssignmentConfig(false, TableType.REALTIME));
+        Map.of("CONSUMING", createInstanceAssignmentConfig(false, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("CONSUMING").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is not enabled for CONSUMING segments, but instance assignment is allowed",
         RebalancePreCheckerResult.PreCheckStatus.WARN, "No need to reload",
@@ -276,15 +265,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // response will be the same for MinimizeDataMovementOptions.DISABLE and MinimizeDataMovementOptions.DEFAULT in
     // this case
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    assertEquals(JsonUtils.stringToObject(response, RebalanceResult.class)
+    assertEquals(triggerTableRebalance(rebalanceConfig, TableType.REALTIME)
             .getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage(),
         rebalanceResult.getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage());
 
     // Use MinimizeDataMovementOptions.ENABLE
     rebalanceConfig.setMinimizeDataMovement(Enablement.ENABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -299,13 +286,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Use MinimizeDataMovementOptions.DISABLE and enable it in table config for CONSUMING ONLY
     instanceAssignmentConfigMap =
-        Collections.singletonMap("CONSUMING", createInstanceAssignmentConfig(true, TableType.REALTIME));
+        Map.of("CONSUMING", createInstanceAssignmentConfig(true, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("CONSUMING").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled for CONSUMING segments in table config but it's overridden with disabled",
         RebalancePreCheckerResult.PreCheckStatus.WARN, "No need to reload",
@@ -326,8 +312,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is not enabled for either or both COMPLETED and CONSUMING segments, but instance "
             + "assignment is allowed for both",
@@ -347,15 +332,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // response will be the same for MinimizeDataMovementOptions.DISABLE and MinimizeDataMovementOptions.DEFAULT in
     // this case
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    assertEquals(JsonUtils.stringToObject(response, RebalanceResult.class)
+    assertEquals(triggerTableRebalance(rebalanceConfig, TableType.REALTIME)
             .getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage(),
         rebalanceResult.getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage());
 
     // Use MinimizeDataMovementOptions.ENABLE
     rebalanceConfig.setMinimizeDataMovement(Enablement.ENABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -377,8 +360,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -396,14 +378,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // response will be the same for MinimizeDataMovementOptions.ENABLE and MinimizeDataMovementOptions.DEFAULT in
     rebalanceConfig.setMinimizeDataMovement(Enablement.ENABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    assertEquals(JsonUtils.stringToObject(response, RebalanceResult.class)
+    assertEquals(triggerTableRebalance(rebalanceConfig, TableType.REALTIME)
             .getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage(),
         rebalanceResult.getPreChecksResult().get(DefaultRebalancePreChecker.IS_MINIMIZE_DATA_MOVEMENT).getMessage());
 
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled for both COMPLETED and CONSUMING segments in table config but it's "
             + "overridden with disabled",
@@ -426,8 +406,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is not enabled for either or both COMPLETED and CONSUMING segments, but instance "
             + "assignment is allowed for both",
@@ -446,7 +425,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Use MinimizeDataMovementOptions.DISABLE and enable it in table config for CONSUMING ONLY
     instanceAssignmentConfigMap =
-        Collections.singletonMap("CONSUMING", createInstanceAssignmentConfig(true, TableType.REALTIME));
+        Map.of("CONSUMING", createInstanceAssignmentConfig(true, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("CONSUMING").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     TenantConfig tenantConfig = new TenantConfig(getBrokerTenant(), getServerTenant(),
@@ -454,8 +433,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.setTenantConfig(tenantConfig);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled for CONSUMING segments in table config but it's overridden with disabled",
         RebalancePreCheckerResult.PreCheckStatus.WARN, "No need to reload",
@@ -482,14 +460,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TableConfig originalTableConfig = new TableConfig(tableConfig);
 
     // Ensure pre-check status is null if not enabled
-    String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     assertNull(rebalanceResult.getPreChecksResult());
 
     // Enable pre-checks, nothing is set
     rebalanceConfig.setPreChecks(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -501,14 +477,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Enable minimizeDataMovement, enable replica group only for COMPLETED segments
     Map<String, InstanceAssignmentConfig> instanceAssignmentConfigMap =
-        Collections.singletonMap("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
+        Map.of("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
     InstanceReplicaGroupPartitionConfig replicaGroupPartitionConfig =
         instanceAssignmentConfigMap.get("COMPLETED").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     rebalanceConfig.setIncludeConsuming(true);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled", RebalancePreCheckerResult.PreCheckStatus.PASS,
         "No need to reload", RebalancePreCheckerResult.PreCheckStatus.PASS,
@@ -526,8 +501,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.getIndexingConfig().getBloomFilterColumns().add("Quarter");
     tableConfig.setInstanceAssignmentConfigMap(null);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "Reload needed prior to running rebalance",
@@ -540,8 +514,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // Undo tableConfig change
     tableConfig.getIndexingConfig().getBloomFilterColumns().remove("Quarter");
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -560,8 +533,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setReassignInstances(true);
     tableConfig.setInstanceAssignmentConfigMap(null);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -582,8 +554,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     Schema schema = getSchema(getTableName());
     schema.addField(new MetricFieldSpec("NewAddedIntMetricB", FieldSpec.DataType.INT, 1));
     updateSchema(schema);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "Reload needed prior to running rebalance",
@@ -595,12 +566,11 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Keep schema change and update table config to add minimizeDataMovement
     instanceAssignmentConfigMap =
-        Collections.singletonMap("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
+        Map.of("COMPLETED", createInstanceAssignmentConfig(true, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("COMPLETED").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled", RebalancePreCheckerResult.PreCheckStatus.PASS,
         "Reload needed prior to running rebalance", RebalancePreCheckerResult.PreCheckStatus.WARN,
@@ -615,12 +585,11 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Keep schema change and update table config to add instance config map with minimizeDataMovement = false
     instanceAssignmentConfigMap =
-        Collections.singletonMap("CONSUMING", createInstanceAssignmentConfig(false, TableType.REALTIME));
+        Map.of("CONSUMING", createInstanceAssignmentConfig(false, TableType.REALTIME));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("CONSUMING").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "Reload needed prior to running rebalance",
@@ -643,8 +612,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setMinAvailableReplicas(-1);
     tableConfig.setInstanceAssignmentConfigMap(null);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "Reload needed prior to running rebalance",
@@ -656,14 +624,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
             + "\nCONSUMING segments - Replica Groups are not enabled, replication: " + tableConfig.getReplication(),
         RebalancePreCheckerResult.PreCheckStatus.PASS);
 
-    response =
-        sendPostRequest(getControllerRequestURLBuilder().forTableReload(getTableName(), TableType.REALTIME, false));
+    String response = reloadRealtimeTable(getTableName());
     waitForReloadToComplete(getReloadJobIdFromResponse(response), 30_000);
 
     rebalanceConfig.setBestEfforts(false);
     rebalanceConfig.setBootstrap(false);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -692,15 +658,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TableConfig originalTableConfig = new TableConfig(tableConfig);
 
     // Ensure pre-check status is null if not enabled
-    String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
 
     // Enable pre-checks, nothing is set
     rebalanceConfig.setPreChecks(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -712,13 +676,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Enable minimizeDataMovement
     Map<String, InstanceAssignmentConfig> instanceAssignmentConfigMap =
-        Collections.singletonMap("OFFLINE", createInstanceAssignmentConfig(true, TableType.OFFLINE));
+        Map.of("OFFLINE", createInstanceAssignmentConfig(true, TableType.OFFLINE));
     InstanceReplicaGroupPartitionConfig replicaGroupPartitionConfig =
         instanceAssignmentConfigMap.get("OFFLINE").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled", RebalancePreCheckerResult.PreCheckStatus.PASS,
@@ -733,8 +696,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Override minimizeDataMovement
     rebalanceConfig.setMinimizeDataMovement(Enablement.DISABLE);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled in table config but it's overridden with disabled",
@@ -749,13 +711,12 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Use default minimizeDataMovement and disable it in table config
     instanceAssignmentConfigMap =
-        Collections.singletonMap("OFFLINE", createInstanceAssignmentConfig(false, TableType.OFFLINE));
+        Map.of("OFFLINE", createInstanceAssignmentConfig(false, TableType.OFFLINE));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("OFFLINE").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
     rebalanceConfig.setMinimizeDataMovement(Enablement.DEFAULT);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is not enabled but instance assignment is allowed",
@@ -773,8 +734,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     tableConfig.getIndexingConfig().getBloomFilterColumns().add("Quarter");
     tableConfig.setInstanceAssignmentConfigMap(null);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -787,8 +747,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // Undo tableConfig change
     tableConfig.getIndexingConfig().getBloomFilterColumns().remove("Quarter");
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -802,11 +761,10 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     // set 'updateTargetTier=true'
     TierConfig tierConfig = new TierConfig("tier2", TierFactory.TIME_SEGMENT_SELECTOR_TYPE, "40d", null,
         TierFactory.PINOT_SERVER_STORAGE_TYPE, TagNameUtils.getOfflineTagForTenant(getServerTenant()), null, null);
-    tableConfig.setTierConfigsList(Collections.singletonList(tierConfig));
+    tableConfig.setTierConfigsList(List.of(tierConfig));
     updateTableConfig(tableConfig);
     rebalanceConfig.setUpdateTargetTier(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -818,8 +776,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
         RebalancePreCheckerResult.PreCheckStatus.PASS);
 
     rebalanceConfig.setUpdateTargetTier(false);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -842,8 +799,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     BaseServerStarter serverStarter0 = startOneServer(NUM_SERVERS);
     rebalanceConfig.setReassignInstances(true);
     tableConfig.setInstanceAssignmentConfigMap(null);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -863,8 +819,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     Schema schema = createSchema();
     schema.addField(new MetricFieldSpec("NewAddedIntMetric", FieldSpec.DataType.INT, 1));
     updateSchema(schema);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -876,12 +831,11 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Keep schema change and update table config to add minimizeDataMovement
     instanceAssignmentConfigMap =
-        Collections.singletonMap("OFFLINE", createInstanceAssignmentConfig(true, TableType.OFFLINE));
+        Map.of("OFFLINE", createInstanceAssignmentConfig(true, TableType.OFFLINE));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("OFFLINE").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled", RebalancePreCheckerResult.PreCheckStatus.PASS,
@@ -896,12 +850,11 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Keep schema change and update table config to add instance config map with minimizeDataMovement = false
     instanceAssignmentConfigMap =
-        Collections.singletonMap("OFFLINE", createInstanceAssignmentConfig(false, TableType.OFFLINE));
+        Map.of("OFFLINE", createInstanceAssignmentConfig(false, TableType.OFFLINE));
     replicaGroupPartitionConfig = instanceAssignmentConfigMap.get("OFFLINE").getReplicaGroupPartitionConfig();
     tableConfig.setInstanceAssignmentConfigMap(instanceAssignmentConfigMap);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.NO_OP,
         "minimizeDataMovement is enabled",
@@ -923,8 +876,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setMinAvailableReplicas(-1);
     tableConfig.setInstanceAssignmentConfigMap(null);
     updateTableConfig(tableConfig);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
@@ -937,16 +889,13 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
         RebalancePreCheckerResult.PreCheckStatus.PASS);
 
     // reload - needed due to the schema change since that cannot be undone
-    response = sendPostRequest(getControllerRequestURLBuilder().forTableReload(getTableName(), TableType.OFFLINE,
-        false));
+    String response = reloadOfflineTable(getTableName(), false);
     waitForReloadToComplete(getReloadJobIdFromResponse(response), 30_000);
     // reload realtime table as well for other realtime tests
-    response = sendPostRequest(getControllerRequestURLBuilder().forTableReload(getTableName(), TableType.REALTIME,
-        false));
+    response = reloadRealtimeTable(getTableName());
     waitForReloadToComplete(getReloadJobIdFromResponse(response), 30_000);
 
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     checkRebalancePreCheckStatus(rebalanceResult, RebalanceResult.Status.DONE,
         "Instance assignment not allowed, no need for minimizeDataMovement",
         RebalancePreCheckerResult.PreCheckStatus.PASS, "No need to reload",
@@ -961,8 +910,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setBootstrap(false);
     rebalanceConfig.setBestEfforts(false);
     rebalanceConfig.setDryRun(false);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     // Expect FAILED: Pre-checks can only be enabled in dry-run mode, not triggering rebalance
@@ -1040,8 +988,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TableConfig originalTableConfig = new TableConfig(tableConfig);
 
     // Ensure summary status is non-null always
-    String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-    RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.NO_OP, false, NUM_SERVERS_REALTIME,
         NUM_SERVERS_REALTIME,
@@ -1061,8 +1008,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     TableConfig originalTableConfig = new TableConfig(tableConfig);
 
     // Ensure summary status is non-null always
-    String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.NO_OP, false, NUM_SERVERS_OFFLINE,
@@ -1072,8 +1018,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     BaseServerStarter serverStarter1 = startOneServer(NUM_SERVERS);
     createServerTenant(getServerTenant(), 1, 0);
     rebalanceConfig.setReassignInstances(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.DONE, true, NUM_SERVERS_OFFLINE,
@@ -1083,8 +1028,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setDryRun(false);
     rebalanceConfig.setDowntime(true);
     rebalanceConfig.setReassignInstances(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     assertEquals(rebalanceResult.getStatus(), RebalanceResult.Status.DONE);
@@ -1096,8 +1040,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Re-enable dry-run
     rebalanceConfig.setDryRun(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.DONE, true, NUM_SERVERS_OFFLINE + 1,
@@ -1107,8 +1050,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
     rebalanceConfig.setDryRun(false);
     rebalanceConfig.setDowntime(true);
     rebalanceConfig.setReassignInstances(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     assertEquals(rebalanceResult.getStatus(), RebalanceResult.Status.DONE);
@@ -1120,8 +1062,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Try dry-run again
     rebalanceConfig.setDryRun(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNull(rebalanceResult.getPreChecksResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.NO_OP, false, NUM_SERVERS_OFFLINE,
@@ -1129,8 +1070,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
 
     // Enable pre-checks just to verify that the pre-checks object is not null
     rebalanceConfig.setPreChecks(true);
-    response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.OFFLINE));
-    rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+    rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.OFFLINE);
     assertNotNull(rebalanceResult.getRebalanceSummaryResult());
     assertNotNull(rebalanceResult.getPreChecksResult());
     checkRebalanceDryRunSummary(rebalanceResult, RebalanceResult.Status.NO_OP, false, NUM_SERVERS_OFFLINE,
@@ -1406,8 +1346,7 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
       rebalanceConfig.setIncludeConsuming(true);
       rebalanceConfig.setMinAvailableReplicas(0);
 
-      String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-      RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+      RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
       RebalanceSummaryResult summary = rebalanceResult.getRebalanceSummaryResult();
       assertEquals(
           summary.getServerInfo().getNumServers().getExpectedValueAfterRebalance(),
@@ -1465,11 +1404,9 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
       rebalanceConfig.setIncludeConsuming(true);
       // notice that this could get an HTTP 409 CONFLICT, when the test failed due to the timeout waiting on the table
       // to converge, and try to rebalance again here. So we need to cancel the original job first.
-      sendDeleteRequest(
-          StringUtil.join("/", getControllerRequestURLBuilder().getBaseUrl(), "tables", getTableName(), "rebalance")
-              + "?type=" + tableConfig.getTableType().toString());
-      String response = sendPostRequest(getTableRebalanceUrl(rebalanceConfig, TableType.REALTIME));
-      RebalanceResult rebalanceResult = JsonUtils.stringToObject(response, RebalanceResult.class);
+      getOrCreateAdminClient().getRebalanceClient()
+          .cancelRebalance(getTableName(), tableConfig.getTableType().toString());
+      RebalanceResult rebalanceResult = triggerTableRebalance(rebalanceConfig, TableType.REALTIME);
       waitForRebalanceToComplete(rebalanceResult.getJobId(), FORCE_COMMIT_REBALANCE_TIMEOUT_MS);
 
       serverStarter0.stop();
@@ -1492,11 +1429,8 @@ public class TableRebalanceIntegrationTest extends BaseHybridClusterIntegrationT
   private void waitForReloadToComplete(String reloadJobId, long timeoutMs) {
     TestUtils.waitForCondition(aVoid -> {
       try {
-        String requestUrl = getControllerRequestURLBuilder().forSegmentReloadStatus(reloadJobId);
-        SimpleHttpResponse httpResponse =
-            HttpClient.wrapAndThrowHttpException(getHttpClient().sendGetRequest(new URL(requestUrl).toURI(), null));
-        ServerReloadControllerJobStatusResponse reloadResult =
-            JsonUtils.stringToObject(httpResponse.getResponse(), ServerReloadControllerJobStatusResponse.class);
+        PinotTableReloadStatusResponse reloadResult = getOrCreateAdminClient().getSegmentClient()
+            .getSegmentReloadStatusObject(reloadJobId);
         return reloadResult.getEstimatedTimeRemainingInMinutes() == 0.0;
       } catch (Exception e) {
         return null;
