@@ -18,13 +18,12 @@
  */
 package org.apache.pinot.plugin.minion.tasks.mergerollup;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
 import org.apache.helix.model.IdealState;
@@ -39,6 +38,7 @@ import org.apache.pinot.common.minion.MergeRollupTaskMetadata;
 import org.apache.pinot.controller.helix.core.minion.ClusterInfoAccessor;
 import org.apache.pinot.core.common.MinionConstants;
 import org.apache.pinot.core.minion.PinotTaskConfig;
+import org.apache.pinot.plugin.minion.tasks.MinionTaskUtils;
 import org.apache.pinot.segment.spi.partition.metadata.ColumnPartitionMetadata;
 import org.apache.pinot.spi.config.table.ColumnPartitionConfig;
 import org.apache.pinot.spi.config.table.DedupConfig;
@@ -49,6 +49,7 @@ import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.config.table.UpsertConfig;
 import org.apache.pinot.spi.config.table.ingestion.BatchIngestionConfig;
 import org.apache.pinot.spi.config.table.ingestion.IngestionConfig;
+import org.apache.pinot.spi.data.DateTimeFieldSpec;
 import org.apache.pinot.spi.data.DimensionFieldSpec;
 import org.apache.pinot.spi.data.FieldSpec;
 import org.apache.pinot.spi.data.MetricFieldSpec;
@@ -67,9 +68,7 @@ import static org.mockito.Mockito.when;
 import static org.testng.Assert.*;
 
 
-/**
- * Tests for {@link MergeRollupTaskGenerator}
- */
+/// Tests for [MergeRollupTaskGenerator]
 public class MergeRollupTaskGeneratorTest {
   private static final String RAW_TABLE_NAME = "testTable";
   private static final String OFFLINE_TABLE_NAME = "testTable_OFFLINE";
@@ -91,7 +90,7 @@ public class MergeRollupTaskGeneratorTest {
     assertTrue(MergeRollupTaskGenerator.validate(tableConfig, MinionConstants.MergeRollupTask.TASK_TYPE));
 
     IngestionConfig ingestionConfig = new IngestionConfig();
-    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(Collections.emptyList(), "REFRESH", "daily"));
+    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(List.of(), "REFRESH", "daily"));
     tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
             .setIngestionConfig(ingestionConfig).build();
@@ -131,7 +130,7 @@ public class MergeRollupTaskGeneratorTest {
     validConfig.put(prefix + "c.nominalEntries", "8092");
     validConfig.put(prefix + "c.samplingProbability", "0.9");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, validConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, validConfig)))
         .build();
     taskGenerator.validateTaskConfigs(offlineTableConfig, schema, validConfig);
   }
@@ -148,11 +147,109 @@ public class MergeRollupTaskGeneratorTest {
     invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
     invalidConfig.put(mergeLevel + ".eraseDimensionValues", "b");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
         .build();
     assertThrows(IllegalStateException.class, () -> {
       taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
     });
+  }
+
+  @Test
+  public void testFirstLastAggregationTypeValidation() {
+    MergeRollupTaskGenerator taskGenerator = new MergeRollupTaskGenerator();
+    Schema schema = new Schema();
+    schema.addField(new MetricFieldSpec("c", FieldSpec.DataType.LONG));
+    schema.addField(new DimensionFieldSpec("d", FieldSpec.DataType.STRING, true));
+    schema.addField(new DateTimeFieldSpec(TIME_COLUMN_NAME, FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH",
+        "1:MILLISECONDS"));
+
+    Map<String, String> taskConfig = new HashMap<>();
+    taskConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "hourly");
+    taskConfig.put("c.aggregationType", "lastWithTime");
+    TableConfig tableConfigWithTimeColumn = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setTimeColumnName(TIME_COLUMN_NAME)
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, taskConfig))).build();
+    // "lastWithTime"/"firstWithTime" on a metric column with a resolvable time column are valid
+    taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, taskConfig);
+    taskConfig.put("c.aggregationType", "firstWithTime");
+    taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, taskConfig);
+
+    // Invalid aggregation type should fail the validation
+    taskConfig.put("c.aggregationType", "unsupported");
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, taskConfig));
+
+    // Parseable aggregation type without an available value aggregator should fail the validation
+    taskConfig.put("c.aggregationType", "distinctCount");
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, taskConfig));
+    taskConfig.put("c.aggregationType", "lastWithTime");
+
+    // "lastWithTime"/"firstWithTime" requires the table to have a time column
+    TableConfig tableConfigWithoutTimeColumn = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, taskConfig))).build();
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithoutTimeColumn, schema, taskConfig));
+
+    // "lastWithTime"/"firstWithTime" requires the time column to be resolvable as a DateTime column in schema
+    TableConfig tableConfigWithUnresolvableTimeColumn =
+        new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setTimeColumnName("otherTime")
+            .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, taskConfig))).build();
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithUnresolvableTimeColumn, schema, taskConfig));
+
+    // "lastWithTime"/"firstWithTime" requires the column to be a metric column in schema
+    Map<String, String> dimensionColumnConfig = new HashMap<>();
+    dimensionColumnConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "hourly");
+    dimensionColumnConfig.put("d.aggregationType", "lastWithTime");
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, dimensionColumnConfig));
+
+    // An aggregationType configured for a column that does not exist in schema should fail the validation, even for
+    // non-order-sensitive types (e.g. a typo in the column name)
+    Map<String, String> missingColumnConfig = new HashMap<>();
+    missingColumnConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "hourly");
+    missingColumnConfig.put("missingCol.aggregationType", "sum");
+    assertThrows(IllegalStateException.class,
+        () -> taskGenerator.validateTaskConfigs(tableConfigWithTimeColumn, schema, missingColumnConfig));
+  }
+
+  @Test
+  public void testBytesBackedAggregationColumnTypeValidation() {
+    MergeRollupTaskGenerator taskGenerator = new MergeRollupTaskGenerator();
+    Schema schema = new Schema();
+    schema.addField(new MetricFieldSpec("bytesCol", FieldSpec.DataType.BYTES));
+    schema.addField(new MetricFieldSpec("longCol", FieldSpec.DataType.LONG));
+    schema.addField(new DimensionFieldSpec("d", FieldSpec.DataType.STRING, true));
+    schema.addField(new DateTimeFieldSpec(TIME_COLUMN_NAME, FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH",
+        "1:MILLISECONDS"));
+    TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setTimeColumnName(TIME_COLUMN_NAME).build();
+
+    // Bytes-backed aggregations on a BYTES column are valid
+    for (String aggregationType : new String[]{"avg", "percentileTDigest", "distinctCountHLL"}) {
+      Map<String, String> validConfig = new HashMap<>();
+      validConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "daily");
+      validConfig.put("bytesCol.aggregationType", aggregationType);
+      taskGenerator.validateTaskConfigs(tableConfig, schema, validConfig);
+    }
+
+    // The same bytes-backed aggregations on a non-BYTES (LONG) column must fail at config time
+    for (String aggregationType : new String[]{"avg", "percentileTDigest", "distinctCountHLL"}) {
+      Map<String, String> invalidConfig = new HashMap<>();
+      invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "daily");
+      invalidConfig.put("longCol.aggregationType", aggregationType);
+      assertThrows(IllegalStateException.class,
+          () -> taskGenerator.validateTaskConfigs(tableConfig, schema, invalidConfig));
+    }
+
+    // Non-bytes-backed aggregations on a numeric column remain valid
+    for (String aggregationType : new String[]{"sum", "max"}) {
+      Map<String, String> validConfig = new HashMap<>();
+      validConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, "daily");
+      validConfig.put("longCol.aggregationType", aggregationType);
+      taskGenerator.validateTaskConfigs(tableConfig, schema, validConfig);
+    }
   }
 
   @Test
@@ -168,7 +265,7 @@ public class MergeRollupTaskGeneratorTest {
     invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
     invalidConfig.put(prefix + "b.nominalEntries", "8092");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
         .build();
     assertThrows(IllegalStateException.class, () -> {
       taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
@@ -188,7 +285,7 @@ public class MergeRollupTaskGeneratorTest {
     invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
     invalidConfig.put(prefix + "a.samplingProbability", "-1.01");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
         .build();
     assertThrows(IllegalStateException.class, () -> {
       taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
@@ -208,7 +305,7 @@ public class MergeRollupTaskGeneratorTest {
     invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
     invalidConfig.put(prefix + "a.nominalEntries", "0");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
         .build();
     assertThrows(IllegalStateException.class, () -> {
       taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
@@ -228,16 +325,52 @@ public class MergeRollupTaskGeneratorTest {
     invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
     invalidConfig.put(prefix + "a.lgK", "0");
     TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
         .build();
     assertThrows(IllegalStateException.class, () -> {
       taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
     });
   }
 
-  /**
-   * Tests for some config checks
-   */
+  @Test
+  public void testValidCompressionFactor() {
+    MergeRollupTaskGenerator taskGenerator = new MergeRollupTaskGenerator();
+    Schema schema = new Schema();
+    schema.addField(new MetricFieldSpec("a", FieldSpec.DataType.BYTES));
+
+    String mergeLevel = "hourly";
+    String prefix = mergeLevel + "." + MinionConstants.MergeTask.AGGREGATION_FUNCTION_PARAMETERS_PREFIX;
+
+    Map<String, String> validConfig = new HashMap<>();
+    validConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
+    validConfig.put(prefix + "a.compressionFactor", "200");
+    TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, validConfig)))
+        .build();
+    taskGenerator.validateTaskConfigs(offlineTableConfig, schema, validConfig);
+  }
+
+  @Test
+  public void testInvalidCompressionFactor() {
+    MergeRollupTaskGenerator taskGenerator = new MergeRollupTaskGenerator();
+    Schema schema = new Schema();
+    schema.addField(new MetricFieldSpec("a", FieldSpec.DataType.BYTES));
+
+    String mergeLevel = "hourly";
+    String prefix = mergeLevel + "." + MinionConstants.MergeTask.AGGREGATION_FUNCTION_PARAMETERS_PREFIX;
+
+    Map<String, String> invalidConfig = new HashMap<>();
+    invalidConfig.put(MinionConstants.MergeRollupTask.MERGE_LEVEL_KEY, mergeLevel);
+    invalidConfig.put(prefix + "a.compressionFactor", "0");
+    TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
+        .setTaskConfig(new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, invalidConfig)))
+        .build();
+    assertThrows(IllegalStateException.class, () -> {
+      taskGenerator.validateTaskConfigs(offlineTableConfig, schema, invalidConfig);
+    });
+  }
+
+  /// Tests for some config checks
   @Test
   public void testGenerateTasksCheckConfigs() {
     ClusterInfoAccessor mockClusterInfoProvide = mock(ClusterInfoAccessor.class);
@@ -282,9 +415,7 @@ public class MergeRollupTaskGeneratorTest {
     assertTrue(pinotTaskConfigs.isEmpty());
   }
 
-  /**
-   * Test pre-filter of task generation
-   */
+  /// Test pre-filter of task generation
   @Test
   public void testFilterSegmentsforRealtimeTable() {
     ClusterInfoAccessor mockClusterInfoProvide = mock(ClusterInfoAccessor.class);
@@ -370,9 +501,7 @@ public class MergeRollupTaskGeneratorTest {
     });
   }
 
-  /**
-   * Test empty table
-   */
+  /// Test empty table
   @Test
   public void testEmptyTable() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -385,7 +514,7 @@ public class MergeRollupTaskGeneratorTest {
     TableConfig offlineTableConfig = getTableConfig(TableType.OFFLINE, taskConfigsMap);
     ClusterInfoAccessor mockClusterInfoProvide = mock(ClusterInfoAccessor.class);
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
-        Lists.newArrayList(Collections.emptyList()));
+        Lists.newArrayList(List.of()));
     when(mockClusterInfoProvide.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(new IdealState(OFFLINE_TABLE_NAME));
     mockMergeRollupTaskMetadataGetterAndSetter(mockClusterInfoProvide);
 
@@ -397,9 +526,7 @@ public class MergeRollupTaskGeneratorTest {
     assertEquals(pinotTaskConfigs.size(), 0);
   }
 
-  /**
-   * Test empty segment
-   */
+  /// Test empty segment
   @Test
   public void testEmptySegment() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -429,9 +556,7 @@ public class MergeRollupTaskGeneratorTest {
     assertEquals(pinotTaskConfigs.size(), 0);
   }
 
-  /**
-   * Test buffer time
-   */
+  /// Test buffer time
   @Test
   public void testBufferTime() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -458,9 +583,7 @@ public class MergeRollupTaskGeneratorTest {
     assertEquals(pinotTaskConfigs.size(), 0);
   }
 
-  /**
-   * Test max number records per task
-   */
+  /// Test max number records per task
   @Test
   public void testMaxNumRecordsPerTask() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -513,9 +636,7 @@ public class MergeRollupTaskGeneratorTest {
     checkPinotTaskConfig(pinotTaskConfigs.get(1).getConfigs(), segmentName3, DAILY, "concat", "1d", null, "1000000");
   }
 
-  /**
-   * Test num parallel buckets
-   */
+  /// Test num parallel buckets
   @Test
   public void testNumParallelBuckets() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -590,9 +711,9 @@ public class MergeRollupTaskGeneratorTest {
 
     // Has un-merged buckets
     metadata6 = getSegmentZKMetadata(segmentName6, 432_000_000L, 432_100_000L, TimeUnit.MILLISECONDS, null);
-    metadata1.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
-    metadata2.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
-    metadata4.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata1.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata2.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata4.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, metadata3, metadata4, metadata5, metadata6));
     when(mockClusterInfoProvide.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(getIdealState(OFFLINE_TABLE_NAME,
@@ -622,8 +743,8 @@ public class MergeRollupTaskGeneratorTest {
         getSegmentZKMetadata(segmentName7, 86_400_000L, 90_000_000L, TimeUnit.MILLISECONDS, "download7");
     SegmentZKMetadata metadata8 =
         getSegmentZKMetadata(segmentName8, 2_592_000_000L, 2_600_000_000L, TimeUnit.MILLISECONDS, "download8");
-    metadata7.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
-    metadata8.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata7.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata8.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata7, metadata8));
     when(mockClusterInfoProvide.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(
@@ -634,9 +755,7 @@ public class MergeRollupTaskGeneratorTest {
     checkPinotTaskConfig(pinotTaskConfigs.get(0).getConfigs(), segmentName7, MONTHLY, "concat", "30d", null, "1000000");
   }
 
-  /**
-   * Test partitioned table
-   */
+  /// Test partitioned table
   @Test
   public void testPartitionedTable() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -649,7 +768,7 @@ public class MergeRollupTaskGeneratorTest {
     TableConfig offlineTableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
             .setSegmentPartitionConfig(new SegmentPartitionConfig(
-                Collections.singletonMap("memberId", new ColumnPartitionConfig("murmur", 10))))
+                Map.of("memberId", new ColumnPartitionConfig("murmur", 10))))
             .setTaskConfig(new TableTaskConfig(taskConfigsMap)).build();
 
     String segmentName1 = "testTable__1";
@@ -658,20 +777,20 @@ public class MergeRollupTaskGeneratorTest {
     String segmentName4 = "testTable__4";
     SegmentZKMetadata metadata1 =
         getSegmentZKMetadata(segmentName1, 86_400_000L, 90_000_000L, TimeUnit.MILLISECONDS, null);
-    metadata1.setPartitionMetadata(new SegmentPartitionMetadata(Collections.singletonMap("memberId",
-        new ColumnPartitionMetadata("murmur", 10, Collections.singleton(0), null))));
+    metadata1.setPartitionMetadata(new SegmentPartitionMetadata(Map.of("memberId",
+        new ColumnPartitionMetadata("murmur", 10, Set.of(0), null))));
     SegmentZKMetadata metadata2 =
         getSegmentZKMetadata(segmentName2, 86_400_000L, 100_000_000L, TimeUnit.MILLISECONDS, null);
-    metadata2.setPartitionMetadata(new SegmentPartitionMetadata(Collections.singletonMap("memberId",
-        new ColumnPartitionMetadata("murmur", 10, Collections.singleton(0), null))));
+    metadata2.setPartitionMetadata(new SegmentPartitionMetadata(Map.of("memberId",
+        new ColumnPartitionMetadata("murmur", 10, Set.of(0), null))));
     SegmentZKMetadata metadata3 =
         getSegmentZKMetadata(segmentName3, 86_400_000L, 110_000_000L, TimeUnit.MILLISECONDS, null);
-    metadata3.setPartitionMetadata(new SegmentPartitionMetadata(Collections.singletonMap("memberId",
-        new ColumnPartitionMetadata("murmur", 10, Collections.singleton(1), null))));
+    metadata3.setPartitionMetadata(new SegmentPartitionMetadata(Map.of("memberId",
+        new ColumnPartitionMetadata("murmur", 10, Set.of(1), null))));
     SegmentZKMetadata metadata4 =
         getSegmentZKMetadata(segmentName4, 90_000_000L, 110_000_000L, TimeUnit.MILLISECONDS, null);
-    metadata4.setPartitionMetadata(new SegmentPartitionMetadata(Collections.singletonMap("memberId",
-        new ColumnPartitionMetadata("murmur", 10, Collections.singleton(1), null))));
+    metadata4.setPartitionMetadata(new SegmentPartitionMetadata(Map.of("memberId",
+        new ColumnPartitionMetadata("murmur", 10, Set.of(1), null))));
     ClusterInfoAccessor mockClusterInfoProvide = mock(ClusterInfoAccessor.class);
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, metadata3, metadata4));
@@ -733,9 +852,7 @@ public class MergeRollupTaskGeneratorTest {
     assertTrue(isPartitionedSegmentsGroup1Seen && isPartitionedSegmentsGroup2Seen && isPartitionedSegmentsGroup3Seen);
   }
 
-  /**
-   * Test update watermark
-   */
+  /// Test update watermark
   @Test
   public void testUpdateWatermark() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -776,7 +893,7 @@ public class MergeRollupTaskGeneratorTest {
     waterMarkMap.put(DAILY, 86_400_000L);
     mockClusterInfoProvide.setMinionTaskMetadata(new MergeRollupTaskMetadata(OFFLINE_TABLE_NAME, waterMarkMap),
         MinionConstants.MergeRollupTask.TASK_TYPE, -1);
-    metadata1.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata1.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     pinotTaskConfigs = generator.generateTasks(Lists.newArrayList(offlineTableConfig));
     assertEquals(MergeRollupTaskMetadata.fromZNRecord(
         mockClusterInfoProvide.getMinionTaskMetadataZNRecord(MinionConstants.MergeRollupTask.TASK_TYPE,
@@ -788,7 +905,7 @@ public class MergeRollupTaskGeneratorTest {
     waterMarkMap.put(DAILY, 345_600_000L);
     mockClusterInfoProvide.setMinionTaskMetadata(new MergeRollupTaskMetadata(OFFLINE_TABLE_NAME, waterMarkMap),
         MinionConstants.MergeRollupTask.TASK_TYPE, -1);
-    metadata2.setCustomMap(ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+    metadata2.setCustomMap(Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     pinotTaskConfigs = generator.generateTasks(Lists.newArrayList(offlineTableConfig));
     assertEquals(MergeRollupTaskMetadata.fromZNRecord(
         mockClusterInfoProvide.getMinionTaskMetadataZNRecord(MinionConstants.MergeRollupTask.TASK_TYPE,
@@ -796,9 +913,7 @@ public class MergeRollupTaskGeneratorTest {
     assertEquals(pinotTaskConfigs.size(), 0);
   }
 
-  /**
-   * Tests for incomplete task
-   */
+  /// Tests for incomplete task
   @Test
   public void testIncompleteTask() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -863,14 +978,14 @@ public class MergeRollupTaskGeneratorTest {
 
     // If same task and table, but COMPLETED, generate
     mergedMetadata1.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, mergedMetadata1));
     when(mockClusterInfoProvide.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(
         getIdealState(OFFLINE_TABLE_NAME, Lists.newArrayList(segmentName1, segmentName2, mergedSegmentName1)));
     SegmentLineage segmentLineage = new SegmentLineage(OFFLINE_TABLE_NAME);
     segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
-        new LineageEntry(Collections.singletonList(segmentName1), Collections.singletonList(mergedSegmentName1),
+        new LineageEntry(List.of(segmentName1), List.of(mergedSegmentName1),
             LineageEntryState.COMPLETED, 11111L));
     when(mockClusterInfoProvide.getSegmentLineage(OFFLINE_TABLE_NAME)).thenReturn(segmentLineage);
     taskStatesMap.put(taskName, TaskState.COMPLETED);
@@ -879,9 +994,7 @@ public class MergeRollupTaskGeneratorTest {
     checkPinotTaskConfig(pinotTaskConfigs.get(0).getConfigs(), segmentName2, DAILY, "concat", "1d", null, "1000000");
   }
 
-  /**
-   * Tests for multilevel selection
-   */
+  /// Tests for multilevel selection
   @Test
   public void testSegmentSelectionMultiLevels() {
     Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
@@ -944,7 +1057,7 @@ public class MergeRollupTaskGeneratorTest {
     SegmentZKMetadata metadataMergedDaily1 =
         getSegmentZKMetadata(segmentNameMergedDaily1, 86_400_000L, 110_000_000L, TimeUnit.MILLISECONDS, null);
     metadataMergedDaily1.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, metadata3, metadata4, metadata5, metadataMergedDaily1));
     when(mockClusterInfoProvide.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(getIdealState(OFFLINE_TABLE_NAME,
@@ -954,7 +1067,7 @@ public class MergeRollupTaskGeneratorTest {
     SegmentLineage segmentLineage = new SegmentLineage(OFFLINE_TABLE_NAME);
     segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
         new LineageEntry(Arrays.asList(segmentName1, segmentName2, segmentName3),
-            Collections.singletonList(segmentNameMergedDaily1), LineageEntryState.COMPLETED, 11111L));
+            List.of(segmentNameMergedDaily1), LineageEntryState.COMPLETED, 11111L));
     when(mockClusterInfoProvide.getSegmentLineage(OFFLINE_TABLE_NAME)).thenReturn(segmentLineage);
     Map<String, TaskState> taskStatesMap = new HashMap<>();
     String taskName1 = "Task_MergeRollupTask_1";
@@ -977,12 +1090,12 @@ public class MergeRollupTaskGeneratorTest {
     SegmentZKMetadata metadataMergedDaily2 =
         getSegmentZKMetadata(segmentNameMergedDaily2, 2_505_600_000L, 2_591_999_999L, TimeUnit.MILLISECONDS, null);
     metadataMergedDaily2.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     String segmentNameMergedDaily3 = "merged_testTable__4_2";
     SegmentZKMetadata metadataMergedDaily3 =
         getSegmentZKMetadata(segmentNameMergedDaily3, 2_592_000_000L, 2_592_010_000L, TimeUnit.MILLISECONDS, null);
     metadataMergedDaily3.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, metadata3, metadata4, metadata5, metadataMergedDaily1,
             metadataMergedDaily2, metadataMergedDaily3));
@@ -991,7 +1104,7 @@ public class MergeRollupTaskGeneratorTest {
             segmentNameMergedDaily1, segmentNameMergedDaily2, segmentNameMergedDaily3)));
 
     segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
-        new LineageEntry(Collections.singletonList(segmentName4),
+        new LineageEntry(List.of(segmentName4),
             Arrays.asList(segmentNameMergedDaily1, segmentNameMergedDaily2), LineageEntryState.COMPLETED, 11111L));
 
     String taskName2 = "Task_MergeRollupTask_2";
@@ -1021,12 +1134,12 @@ public class MergeRollupTaskGeneratorTest {
     SegmentZKMetadata metadataMergedDaily4 =
         getSegmentZKMetadata(segmentNameMergedDaily4, 2_592_000_000L, 2_592_020_000L, TimeUnit.MILLISECONDS, null);
     metadataMergedDaily4.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, DAILY));
     String segmentNameMergedMonthly1 = "merged_testTable__1__2__3__4_1";
     SegmentZKMetadata metadataMergedMonthly1 =
         getSegmentZKMetadata(segmentNameMergedMonthly1, 86_400_000L, 2_591_999_999L, TimeUnit.MILLISECONDS, null);
     metadataMergedMonthly1.setCustomMap(
-        ImmutableMap.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, MONTHLY));
+        Map.of(MinionConstants.MergeRollupTask.SEGMENT_ZK_METADATA_MERGE_LEVEL_KEY, MONTHLY));
     when(mockClusterInfoProvide.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
         Lists.newArrayList(metadata1, metadata2, metadata3, metadata4, metadata5, metadataMergedDaily1,
             metadataMergedDaily2, metadataMergedDaily3, metadataMergedDaily4, metadataMergedMonthly1));
@@ -1037,10 +1150,10 @@ public class MergeRollupTaskGeneratorTest {
 
     segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
         new LineageEntry(Arrays.asList(segmentNameMergedDaily3, segmentName5),
-            Collections.singletonList(segmentNameMergedDaily4), LineageEntryState.COMPLETED, 11111L));
+            List.of(segmentNameMergedDaily4), LineageEntryState.COMPLETED, 11111L));
     segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
         new LineageEntry(Arrays.asList(segmentNameMergedDaily1, segmentNameMergedDaily2),
-            Collections.singletonList(segmentNameMergedMonthly1), LineageEntryState.COMPLETED, 11111L));
+            List.of(segmentNameMergedMonthly1), LineageEntryState.COMPLETED, 11111L));
 
     String taskName3 = "Task_MergeRollupTask_3";
     taskStatesMap.put(taskName3, TaskState.COMPLETED);
@@ -1060,6 +1173,63 @@ public class MergeRollupTaskGeneratorTest {
         mockClusterInfoProvide.getMinionTaskMetadataZNRecord(MinionConstants.MergeRollupTask.TASK_TYPE,
             OFFLINE_TABLE_NAME)).getWatermarkMap().get(MONTHLY).longValue(), 0L);
     assertEquals(pinotTaskConfigs.size(), 0);
+  }
+
+  /// Tests that retentionExpiryBufferPeriod config causes segments near retention to be filtered out from task
+  /// generation. With 30d retention and 5d buffer, effective retention is 25d — segments older than that should be
+  /// excluded.
+  @Test
+  public void testRetentionExpiryBufferFiltersSegments() {
+    Map<String, Map<String, String>> taskConfigsMap = new HashMap<>();
+    Map<String, String> tableTaskConfigs = new HashMap<>();
+    tableTaskConfigs.put("daily.mergeType", "concat");
+    tableTaskConfigs.put("daily.bufferTimePeriod", "2d");
+    tableTaskConfigs.put("daily.bucketTimePeriod", "1d");
+    tableTaskConfigs.put("daily.maxNumRecordsPerSegment", "1000000");
+    tableTaskConfigs.put(MinionTaskUtils.RETENTION_EXPIRY_BUFFER_PERIOD_KEY, "5d");
+    taskConfigsMap.put(MinionConstants.MergeRollupTask.TASK_TYPE, tableTaskConfigs);
+
+    TableConfig offlineTableConfig = new TableConfigBuilder(TableType.OFFLINE)
+        .setTableName(RAW_TABLE_NAME)
+        .setTimeColumnName(TIME_COLUMN_NAME)
+        .setRetentionTimeUnit("DAYS")
+        .setRetentionTimeValue("30")
+        .setTaskConfig(new TableTaskConfig(taskConfigsMap))
+        .build();
+
+    ClusterInfoAccessor mockClusterInfoProvider = mock(ClusterInfoAccessor.class);
+
+    long nowMs = System.currentTimeMillis();
+    long oneDayMs = 86_400_000L;
+
+    // Within effective retention (25d), outside buffer (2d)
+    String segmentName1 = "testTable__1";
+    SegmentZKMetadata metadata1 = getSegmentZKMetadata(segmentName1,
+        nowMs - 5 * oneDayMs, nowMs - 4 * oneDayMs, TimeUnit.MILLISECONDS, "download1");
+
+    // Past effective retention (27d > 25d)
+    String segmentName2 = "testTable__2";
+    SegmentZKMetadata metadata2 = getSegmentZKMetadata(segmentName2,
+        nowMs - 28 * oneDayMs, nowMs - 27 * oneDayMs, TimeUnit.MILLISECONDS, "download2");
+
+    when(mockClusterInfoProvider.getSegmentsZKMetadata(OFFLINE_TABLE_NAME)).thenReturn(
+        Lists.newArrayList(metadata1, metadata2));
+    when(mockClusterInfoProvider.getIdealState(OFFLINE_TABLE_NAME)).thenReturn(
+        getIdealState(OFFLINE_TABLE_NAME, Lists.newArrayList(segmentName1, segmentName2)));
+    when(mockClusterInfoProvider.getTaskStates(MinionConstants.MergeRollupTask.TASK_TYPE))
+        .thenReturn(new HashMap<>());
+    mockMergeRollupTaskMetadataGetterAndSetter(mockClusterInfoProvider);
+
+    MergeRollupTaskGenerator generator = new MergeRollupTaskGenerator();
+    generator.init(mockClusterInfoProvider);
+    List<PinotTaskConfig> pinotTaskConfigs = generator.generateTasks(Lists.newArrayList(offlineTableConfig));
+
+    assertEquals(pinotTaskConfigs.size(), 1);
+    String taskSegments = pinotTaskConfigs.get(0).getConfigs().get(MinionConstants.SEGMENT_NAME_KEY);
+    assertTrue(taskSegments.contains(segmentName1),
+        "Segment within effective retention should be included in task");
+    assertFalse(taskSegments.contains(segmentName2),
+        "Segment past effective retention (with buffer) should be filtered out");
   }
 
   private SegmentZKMetadata getSegmentZKMetadata(String segmentName, long startTime, long endTime, TimeUnit timeUnit,
