@@ -19,10 +19,8 @@
 package org.apache.pinot.plugin.minion.tasks.upsertcompaction;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,6 +28,8 @@ import java.util.concurrent.TimeUnit;
 import org.apache.helix.model.IdealState;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
 import org.apache.pinot.common.restlet.resources.ValidDocIdsMetadataInfo;
+import org.apache.pinot.common.restlet.resources.ValidDocIdsType;
+import org.apache.pinot.common.utils.ServiceStatus;
 import org.apache.pinot.controller.helix.core.minion.ClusterInfoAccessor;
 import org.apache.pinot.core.common.MinionConstants;
 import org.apache.pinot.core.common.MinionConstants.UpsertCompactionTask;
@@ -118,9 +118,9 @@ public class UpsertCompactionTaskGeneratorTest {
   @Test
   public void testGenerateTasksWithNoSegments() {
     when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(
-        Lists.newArrayList(Collections.emptyList()));
+        Lists.newArrayList(List.of()));
     when(_mockClusterInfoAccessor.getIdealState(REALTIME_TABLE_NAME)).thenReturn(
-        getIdealState(REALTIME_TABLE_NAME, Lists.newArrayList(Collections.emptyList())));
+        getIdealState(REALTIME_TABLE_NAME, Lists.newArrayList(List.of())));
 
     _taskGenerator.init(_mockClusterInfoAccessor);
 
@@ -234,13 +234,13 @@ public class UpsertCompactionTaskGeneratorTest {
     // no completed segments scenario, there shouldn't be any segment selected for compaction
     UpsertCompactionTaskGenerator.SegmentSelectionResult segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, new HashMap<>(),
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 0);
 
     // test with valid crc and thresholds
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForDeletion().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().get(0).getSegmentName(),
@@ -251,7 +251,7 @@ public class UpsertCompactionTaskGeneratorTest {
     compactionConfigs = getCompactionConfigs("60", "10");
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     assertTrue(segmentSelectionResult.getSegmentsForCompaction().isEmpty());
     assertEquals(segmentSelectionResult.getSegmentsForDeletion().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForDeletion().get(0), _completedSegment2.getSegmentName());
@@ -260,7 +260,7 @@ public class UpsertCompactionTaskGeneratorTest {
     compactionConfigs = getCompactionConfigs("0", "10");
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     assertEquals(segmentSelectionResult.getSegmentsForDeletion().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().get(0).getSegmentName(),
@@ -271,7 +271,7 @@ public class UpsertCompactionTaskGeneratorTest {
     compactionConfigs = getCompactionConfigs("30", "0");
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     assertEquals(segmentSelectionResult.getSegmentsForDeletion().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 1);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().get(0).getSegmentName(),
@@ -290,7 +290,7 @@ public class UpsertCompactionTaskGeneratorTest {
     });
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
 
     // completedSegment is supposed to be filtered out
     Assert.assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 0);
@@ -315,7 +315,7 @@ public class UpsertCompactionTaskGeneratorTest {
     compactionConfigs = getCompactionConfigs("30", "0");
     segmentSelectionResult =
         UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
-            validDocIdsMetadataInfo);
+            validDocIdsMetadataInfo, Map.of(), MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
     Assert.assertEquals(segmentSelectionResult.getSegmentsForCompaction().size(), 2);
     Assert.assertEquals(segmentSelectionResult.getSegmentsForDeletion().size(), 0);
     assertEquals(segmentSelectionResult.getSegmentsForCompaction().get(0).getSegmentName(),
@@ -329,62 +329,249 @@ public class UpsertCompactionTaskGeneratorTest {
   }
 
   @Test
+  public void testProcessValidDocIdsMetadataConsensus() {
+    Map<String, String> compactionConfigs = getCompactionConfigs("1", "10");
+    String segmentName = _completedSegment.getSegmentName();
+    long crc = _completedSegment.getCrc();
+    Map<String, Integer> twoReplicas = Map.of(segmentName, 2);
+
+    Map<String, List<ValidDocIdsMetadataInfo>> equalReplicas = Map.of(segmentName, List.of(
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server1"),
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server2")));
+    UpsertCompactionTaskGenerator.SegmentSelectionResult result =
+        UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+            equalReplicas, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertEquals(result.getSegmentsForCompaction().size(), 1);
+
+    Map<String, List<ValidDocIdsMetadataInfo>> unequalReplicas = Map.of(segmentName, List.of(
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server1"),
+        meta(segmentName, 60, 40, 100, crc, ServiceStatus.Status.GOOD, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        unequalReplicas, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+    assertTrue(result.getSegmentsForDeletion().isEmpty());
+
+    Map<String, List<ValidDocIdsMetadataInfo>> oneResponded = Map.of(segmentName, List.of(
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server1")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        oneResponded, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+
+    Map<String, List<ValidDocIdsMetadataInfo>> crcMismatch = Map.of(segmentName, List.of(
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server1"),
+        meta(segmentName, 50, 50, 100, crc + 1, ServiceStatus.Status.GOOD, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        crcMismatch, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+
+    Map<String, List<ValidDocIdsMetadataInfo>> unhealthy = Map.of(segmentName, List.of(
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.GOOD, "server1"),
+        meta(segmentName, 50, 50, 100, crc, ServiceStatus.Status.STARTING, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        unhealthy, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        crcMismatch, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.UNSAFE);
+    assertEquals(result.getSegmentsForCompaction().size(), 1);
+
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        crcMismatch, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.MOST_VALID_DOCS);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+
+    Map<String, List<ValidDocIdsMetadataInfo>> mostValidDocs = Map.of(segmentName, List.of(
+        meta(segmentName, 0, 100, 100, crc, ServiceStatus.Status.GOOD, "server1"),
+        meta(segmentName, 100, 0, 100, crc, ServiceStatus.Status.GOOD, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, _completedSegmentsMap,
+        mostValidDocs, twoReplicas, MinionConstants.ValidDocIdsConsensusMode.MOST_VALID_DOCS);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+    assertTrue(result.getSegmentsForDeletion().isEmpty());
+
+    SegmentZKMetadata dataCrcSegment = new SegmentZKMetadata(segmentName);
+    dataCrcSegment.setStatus(CommonConstants.Segment.Realtime.Status.DONE);
+    dataCrcSegment.setTotalDocs(100L);
+    dataCrcSegment.setCrc(1000);
+    dataCrcSegment.setUseDataCrc(true);
+    dataCrcSegment.setDataCrc(5000);
+    Map<String, SegmentZKMetadata> dataCrcMap = Map.of(segmentName, dataCrcSegment);
+    Map<String, List<ValidDocIdsMetadataInfo>> dataCrcMatch = Map.of(segmentName, List.of(
+        metaWithDataCrc(segmentName, 50, 50, 100, 2000, "5000", ServiceStatus.Status.GOOD, "server1"),
+        metaWithDataCrc(segmentName, 50, 50, 100, 2000, "5000", ServiceStatus.Status.GOOD, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, dataCrcMap, dataCrcMatch,
+        twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertEquals(result.getSegmentsForCompaction().size(), 1);
+
+    Map<String, List<ValidDocIdsMetadataInfo>> dataCrcMismatch = Map.of(segmentName, List.of(
+        metaWithDataCrc(segmentName, 50, 50, 100, 2000, "9999", ServiceStatus.Status.GOOD, "server1"),
+        metaWithDataCrc(segmentName, 50, 50, 100, 2000, "9999", ServiceStatus.Status.GOOD, "server2")));
+    result = UpsertCompactionTaskGenerator.processValidDocIdsMetadata(compactionConfigs, dataCrcMap, dataCrcMismatch,
+        twoReplicas, MinionConstants.ValidDocIdsConsensusMode.EQUAL);
+    assertTrue(result.getSegmentsForCompaction().isEmpty());
+  }
+
+  private static ValidDocIdsMetadataInfo meta(String segmentName, long validDocs, long invalidDocs, long totalDocs,
+      long crc, ServiceStatus.Status serverStatus, String instanceId) {
+    return new ValidDocIdsMetadataInfo(segmentName, validDocs, invalidDocs, totalDocs, String.valueOf(crc), null,
+        ValidDocIdsType.SNAPSHOT, 1000, System.currentTimeMillis(), instanceId, serverStatus);
+  }
+
+  private static ValidDocIdsMetadataInfo metaWithDataCrc(String segmentName, long validDocs, long invalidDocs,
+      long totalDocs, long crc, String dataCrc, ServiceStatus.Status serverStatus, String instanceId) {
+    return new ValidDocIdsMetadataInfo(segmentName, validDocs, invalidDocs, totalDocs, String.valueOf(crc), dataCrc,
+        ValidDocIdsType.SNAPSHOT, 1000, System.currentTimeMillis(), instanceId, serverStatus);
+  }
+
+  @Test
   public void testUpsertCompactionTaskConfig() {
     Map<String, String> upsertCompactionTaskConfig =
-        ImmutableMap.of("bufferTimePeriod", "5d", "invalidRecordsThresholdPercent", "1", "invalidRecordsThresholdCount",
+        Map.of("bufferTimePeriod", "5d", "invalidRecordsThresholdPercent", "1", "invalidRecordsThresholdCount",
             "1");
     UpsertConfig upsertConfig = new UpsertConfig(UpsertConfig.Mode.FULL);
     upsertConfig.setSnapshot(Enablement.ENABLE);
     TableConfig tableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig)))
             .build();
 
     _taskGenerator.validateTaskConfigs(tableConfig, new Schema(), upsertCompactionTaskConfig);
 
     // test with invalidRecordsThresholdPercents as 0
-    Map<String, String> upsertCompactionTaskConfig1 = ImmutableMap.of("invalidRecordsThresholdPercent", "0");
+    Map<String, String> upsertCompactionTaskConfig1 = Map.of("invalidRecordsThresholdPercent", "0");
     TableConfig zeroPercentTableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig1)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig1)))
             .build();
     _taskGenerator.validateTaskConfigs(zeroPercentTableConfig, new Schema(), upsertCompactionTaskConfig1);
 
     // test with invalid invalidRecordsThresholdPercents as -1 and 110
-    Map<String, String> upsertCompactionTaskConfig2 = ImmutableMap.of("invalidRecordsThresholdPercent", "-1");
+    Map<String, String> upsertCompactionTaskConfig2 = Map.of("invalidRecordsThresholdPercent", "-1");
     TableConfig negativePercentTableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig2)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig2)))
             .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(negativePercentTableConfig, new Schema(),
             upsertCompactionTaskConfig2));
-    Map<String, String> upsertCompactionTaskConfig3 = ImmutableMap.of("invalidRecordsThresholdPercent", "110");
+    Map<String, String> upsertCompactionTaskConfig3 = Map.of("invalidRecordsThresholdPercent", "110");
     TableConfig hundredTenPercentTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig3)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig3)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(hundredTenPercentTableConfig, new Schema(),
             upsertCompactionTaskConfig3));
 
     // test with invalid invalidRecordsThresholdCount
-    Map<String, String> upsertCompactionTaskConfig4 = ImmutableMap.of("invalidRecordsThresholdCount", "0");
+    Map<String, String> upsertCompactionTaskConfig4 = Map.of("invalidRecordsThresholdCount", "0");
     TableConfig invalidCountTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig4)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig4)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(invalidCountTableConfig, new Schema(), upsertCompactionTaskConfig4));
 
     // test without invalidRecordsThresholdPercent or invalidRecordsThresholdCount
-    Map<String, String> upsertCompactionTaskConfig5 = ImmutableMap.of("bufferTimePeriod", "5d");
+    Map<String, String> upsertCompactionTaskConfig5 = Map.of("bufferTimePeriod", "5d");
     TableConfig invalidTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig5)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig5)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(invalidTableConfig, new Schema(), upsertCompactionTaskConfig5));
+
+    // metadataTTL enabled is not supported with UpsertCompactionTask
+    UpsertConfig ttlUpsertConfig = new UpsertConfig(UpsertConfig.Mode.FULL);
+    ttlUpsertConfig.setSnapshot(Enablement.ENABLE);
+    ttlUpsertConfig.setMetadataTTL(30);
+    TableConfig metadataTtlTableConfig =
+        new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(ttlUpsertConfig)
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig)))
+            .build();
+    Assert.assertThrows(IllegalStateException.class,
+        () -> _taskGenerator.validateTaskConfigs(metadataTtlTableConfig, new Schema(), upsertCompactionTaskConfig));
+  }
+
+  @Test
+  public void testGenerateNoTaskWhenUpsertIsNotEnabled() {
+    // Create a table config without upsert enabled
+    TableConfig tableConfigWithoutUpsert =
+        new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
+            .build();
+
+    // Mock cluster info accessor with completed segments
+    when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(
+        Lists.newArrayList(_completedSegment, _completedSegment2));
+    when(_mockClusterInfoAccessor.getIdealState(REALTIME_TABLE_NAME)).thenReturn(getIdealState(REALTIME_TABLE_NAME,
+        Lists.newArrayList(_completedSegment.getSegmentName(), _completedSegment2.getSegmentName())));
+
+    _taskGenerator.init(_mockClusterInfoAccessor);
+
+    // Generate tasks for table without upsert - should return empty list
+    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(Lists.newArrayList(tableConfigWithoutUpsert));
+
+    // Verify no tasks are generated when upsert is not enabled
+    assertEquals(pinotTaskConfigs.size(), 0);
+  }
+
+  @Test
+  public void testValidateTaskConfigsValidDocIdsTypeSuccess() {
+    // Test valid configurations for different ValidDocIdsType values
+    testValidDocIdsTypeConfiguration("SNAPSHOT_WITH_DELETE", true, true);
+    testValidDocIdsTypeConfiguration("IN_MEMORY_WITH_DELETE", false, true);
+    testValidDocIdsTypeConfiguration("SNAPSHOT", true, false);
+    testValidDocIdsTypeConfiguration("IN_MEMORY", false, false);
+  }
+
+  @Test
+  public void testValidateTaskConfigsValidDocIdsTypeErrors() {
+    // Test error scenarios for ValidDocIdsType validation
+    testValidDocIdsTypeError("SNAPSHOT_WITH_DELETE", false, true,
+        "'snapshot' must not be 'DISABLE'");
+    testValidDocIdsTypeError("SNAPSHOT_WITH_DELETE", true, false,
+        "'deleteRecordColumn' must be provided");
+    testValidDocIdsTypeError("IN_MEMORY_WITH_DELETE", false, false,
+        "'deleteRecordColumn' must be provided");
+  }
+
+  private void testValidDocIdsTypeConfiguration(String validDocIdsType, boolean enableSnapshot,
+      boolean setDeleteColumn) {
+    TableConfig tableConfig = getTableConfig(validDocIdsType, enableSnapshot, setDeleteColumn);
+    Map<String, String> taskConfigs = tableConfig.getTaskConfig().getConfigsForTaskType("UpsertCompactionTask");
+
+    // Should not throw exception for valid configuration
+    _taskGenerator.validateTaskConfigs(tableConfig, new Schema(), taskConfigs);
+  }
+
+  private void testValidDocIdsTypeError(String validDocIdsType, boolean enableSnapshot,
+      boolean setDeleteColumn, String expectedError) {
+    TableConfig tableConfig = getTableConfig(validDocIdsType, enableSnapshot, setDeleteColumn);
+    Map<String, String> taskConfigs = tableConfig.getTaskConfig().getConfigsForTaskType("UpsertCompactionTask");
+
+    // Should throw exception with expected error message
+    IllegalStateException exception = Assert.expectThrows(IllegalStateException.class,
+        () -> _taskGenerator.validateTaskConfigs(tableConfig, new Schema(), taskConfigs));
+    assertTrue(exception.getMessage().contains(expectedError), exception.getMessage());
+  }
+
+  private static TableConfig getTableConfig(String validDocIdsType, boolean enableSnapshot, boolean setDeleteColumn) {
+    UpsertConfig upsertConfig = new UpsertConfig(UpsertConfig.Mode.FULL);
+
+    if (setDeleteColumn) {
+      upsertConfig.setDeleteRecordColumn("deleted");
+    }
+
+    upsertConfig.setSnapshot(enableSnapshot ? Enablement.ENABLE : Enablement.DISABLE);
+
+    Map<String, String> taskConfigs = new HashMap<>();
+    taskConfigs.put("invalidRecordsThresholdPercent", "10");
+    taskConfigs.put("validDocIdsType", validDocIdsType);
+
+    TableConfig tableConfig = new TableConfigBuilder(TableType.REALTIME)
+        .setTableName(RAW_TABLE_NAME)
+        .setUpsertConfig(upsertConfig)
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", taskConfigs)))
+        .build();
+    return tableConfig;
   }
 
   private Map<String, String> getCompactionConfigs(String invalidRecordsThresholdPercent,
