@@ -21,18 +21,19 @@ package org.apache.pinot.query.runtime.operator;
 import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Stopwatch;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import org.apache.pinot.common.datatable.StatMap;
-import org.apache.pinot.common.metrics.ServerMeter;
-import org.apache.pinot.common.metrics.ServerMetrics;
-import org.apache.pinot.common.metrics.ServerTimer;
+import org.apache.pinot.common.metrics.MseMeter;
+import org.apache.pinot.common.metrics.MseMetrics;
+import org.apache.pinot.common.metrics.MseTimer;
 import org.apache.pinot.common.proto.Plan;
 import org.apache.pinot.common.response.broker.BrokerResponseNativeV2;
+import org.apache.pinot.common.utils.config.QueryOptionsUtils;
 import org.apache.pinot.core.common.Operator;
 import org.apache.pinot.core.plan.ExplainInfo;
 import org.apache.pinot.query.runtime.blocks.ErrorMseBlock;
@@ -41,8 +42,9 @@ import org.apache.pinot.query.runtime.operator.set.SetOperator;
 import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
 import org.apache.pinot.query.runtime.plan.pipeline.PipelineBreakerOperator;
-import org.apache.pinot.spi.exception.EarlyTerminationException;
-import org.apache.pinot.spi.exception.QueryErrorCode;
+import org.apache.pinot.spi.accounting.ThreadResourceSnapshot;
+import org.apache.pinot.spi.accounting.ThreadResourceUsageProvider;
+import org.apache.pinot.spi.query.QueryThreadContext;
 import org.apache.pinot.spi.trace.InvocationScope;
 import org.apache.pinot.spi.trace.Tracing;
 import org.slf4j.Logger;
@@ -59,18 +61,16 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
     _operatorId = Joiner.on("_").join(getClass().getSimpleName(), _context.getStageId(), _context.getServer());
   }
 
-  /**
-   * Returns the logger for the operator.
-   * <p>
-   * This method is used to generic multi-stage operator messages using the name of the specific operator.
-   * Implementations should not allocate new loggers for each call but instead reuse some (probably static and final)
-   * attribute.
-   */
+  /// Returns the logger for the operator.
+  ///
+  /// This method is used to generic multi-stage operator messages using the name of the specific operator.
+  /// Implementations should not allocate new loggers for each call but instead reuse some (probably static and final)
+  /// attribute.
   protected abstract Logger logger();
 
-  public abstract Type getOperatorType();
+  public abstract OperatorTypeDescriptor getOperatorType();
 
-  public abstract void registerExecution(long time, int numRows);
+  public abstract void registerExecution(long time, int numRows, long memoryUsedBytes, long gcTimeMs);
 
   /// By default, it uses the active deadline, which is the one that should be used for most operators, but if the
   /// operator does not actively process data (ie both mailbox operators), it should override this method to use the
@@ -79,52 +79,43 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
     return _context.getActiveDeadlineMs();
   }
 
-  /// This method should be called periodically by the operator to check whether the execution should be interrupted.
-  ///
-  /// This could happen when the request deadline is reached, or the thread accountant decides to interrupt the query
-  /// due to resource constraints.
-  protected void checkInterruption() {
-    if (System.currentTimeMillis() >= getDeadlineMs()) {
-      throw QueryErrorCode.EXECUTION_TIMEOUT.asException("Timing out on: " + getExplainName());
-    }
-    if (Tracing.ThreadAccountantOps.isInterrupted()) {
-      throw new EarlyTerminationException("Interrupted on: " + getExplainName());
-    }
+  protected void checkTermination() {
+    QueryThreadContext.checkTermination(this::getExplainName, getDeadlineMs());
   }
 
-  protected void sampleAndCheckInterruption() {
-    checkInterruption();
-    Tracing.ThreadAccountantOps.sample();
+  protected void checkTerminationAndSampleUsage() {
+    QueryThreadContext.checkTerminationAndSampleUsage(this::getExplainName, getDeadlineMs());
   }
 
-  protected void sampleAndCheckInterruptionPeriodically(int numRecordsProcessed) {
-    if ((numRecordsProcessed & Tracing.ThreadAccountantOps.MAX_ENTRIES_KEYS_MERGED_PER_INTERRUPTION_CHECK_MASK) == 0) {
-      sampleAndCheckInterruption();
-    }
+  protected void checkTerminationAndSampleUsagePeriodically(int numRecordsProcessed, String scope) {
+    QueryThreadContext.checkTerminationAndSampleUsagePeriodically(numRecordsProcessed, scope, getDeadlineMs());
   }
 
-  /**
-   * Returns the next block from the operator. It should return non-empty data blocks followed by an end-of-stream (EOS)
-   * block when all the data is processed, or an error block if an error occurred. After it returns EOS or error block,
-   * no more call should be made.
-   */
+  /// Returns the next block from the operator. It should return non-empty data blocks followed by an end-of-stream
+  /// (EOS) block when all the data is processed, or an error block if an error occurred. After it returns EOS or error
+  /// block, no more call should be made.
   @Override
   public MseBlock nextBlock() {
     if (logger().isDebugEnabled()) {
       logger().debug("Operator {}: Reading next block", _operatorId);
     }
+
+    ThreadResourceSnapshot resourceSnapshot = new ThreadResourceSnapshot();
+    long preBlockGcTime = getGcTimeMillis();
     try (InvocationScope ignored = Tracing.getTracer().createScope(getClass())) {
       MseBlock nextBlock;
       Stopwatch executeStopwatch = Stopwatch.createStarted();
       try {
-        checkInterruption();
+        checkTermination();
         nextBlock = getNextBlock();
       } catch (Exception e) {
         logger().warn("Operator {}: Exception while processing next block", _operatorId, e);
         nextBlock = ErrorMseBlock.fromException(e);
       }
       int numRows = nextBlock instanceof MseBlock.Data ? ((MseBlock.Data) nextBlock).getNumRows() : 0;
-      registerExecution(executeStopwatch.elapsed(TimeUnit.MILLISECONDS), numRows);
+      long memoryUsedBytes = resourceSnapshot.getAllocatedBytes();
+      long gcTimeMs = getGcTimeMillis() - preBlockGcTime;
+      registerExecution(executeStopwatch.elapsed(TimeUnit.MILLISECONDS), numRows, memoryUsedBytes, gcTimeMs);
 
       if (logger().isDebugEnabled()) {
         logger().debug("Operator {}. Block {} ready to send", _operatorId, nextBlock);
@@ -137,6 +128,12 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
   protected abstract MseBlock getNextBlock()
       throws Exception;
 
+  /// Signals the operator to terminate early.
+  ///
+  /// After this method is called, the operator should stop processing any more input and return a
+  /// [org.apache.pinot.query.runtime.blocks.SuccessMseBlock] block as soon as possible.
+  /// This method should be called when the consumer of the operator does not need any more data and wants to stop the
+  /// execution early to save resources.
   protected void earlyTerminate() {
     _isEarlyTerminated = true;
     for (MultiStageOperator child : getChildOperators()) {
@@ -147,12 +144,10 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
   @Override
   public abstract List<MultiStageOperator> getChildOperators();
 
-  /**
-   * Calculates and returns the stats for the operator.
-   *
-   * Each time this method is called, a new instance of the stats is created. This is because the stats are mutable and
-   * can be updated by the operator or the caller after the stats are returned.
-   */
+  /// Calculates and returns the stats for the operator.
+  ///
+  /// Each time this method is called, a new instance of the stats is created. This is because the stats are mutable and
+  /// can be updated by the operator or the caller after the stats are returned.
   public final MultiStageQueryStats calculateStats() {
     MultiStageQueryStats upstreamStats = calculateUpstreamStats();
 
@@ -173,7 +168,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         .orElse(MultiStageQueryStats.emptyStats(_context.getStageId()));
   }
 
-  protected abstract StatMap<?> copyStatMaps();
+  public abstract StatMap<?> copyStatMaps();
 
   // TODO: Ideally close() call should finish within request deadline.
   // TODO: Consider passing deadline as part of the API.
@@ -217,18 +212,26 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
   }
 
   protected Map<String, Plan.ExplainNode.AttributeValue> getExplainAttributes() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
-  /**
-   * This enum is used to identify the operation type.
-   * <p>
-   * This is mostly used in the context of stats collection, where we use this enum in the serialization form in order
-   * to identify the type of the stats in an efficient way.
-   * DO NOT change the order of the enum values, as the ordinal is used in serialization.
-   */
-  public enum Type {
-    AGGREGATE(AggregateOperator.StatKey.class) {
+  private long getGcTimeMillis() {
+    if (!QueryOptionsUtils.isCollectGcStats(_context.getOpChainMetadata())) {
+      return -1;
+    }
+    return ThreadResourceUsageProvider.getGcTime();
+  }
+
+  /// This enum is used to identify the operation type.
+  ///
+  /// This is mostly used in the context of stats collection, where we use this enum in the serialization form in order
+  /// to identify the type of the stats in an efficient way.
+  ///
+  /// IMPORTANT: Each enum entry has an explicit `id` used for serialization. When adding new operator types,
+  /// always append them at the end and assign the next available ID. Never reuse or change existing IDs as this
+  /// would break backward compatibility with older versions.
+  public enum Type implements OperatorTypeDescriptor {
+    AGGREGATE(0, AggregateOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -237,15 +240,16 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeNumGroupsLimitReached(stats.getBoolean(AggregateOperator.StatKey.NUM_GROUPS_LIMIT_REACHED));
         response.mergeNumGroupsWarningLimitReached(
             stats.getBoolean(AggregateOperator.StatKey.NUM_GROUPS_WARNING_LIMIT_REACHED));
+        response.mergeNumGroups(stats.getLong(AggregateOperator.StatKey.NUM_GROUPS));
         response.mergeMaxRowsInOperator(stats.getLong(AggregateOperator.StatKey.EMITTED_ROWS));
       }
 
       /// So far this keys do not need to be modified from here because they are incremented in a per-worker basis:
       /// ServerMeter.AGGREGATE_TIMES_NUM_GROUPS_LIMIT_REACHED
       /// ServerMeter.AGGREGATE_TIMES_NUM_GROUPS_WARNING_LIMIT_REACHED
-      /// public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics);
+      /// public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics);
     },
-    FILTER(FilterOperator.StatKey.class) {
+    FILTER(1, FilterOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -253,29 +257,30 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(FilterOperator.StatKey.EMITTED_ROWS));
       }
     },
-    HASH_JOIN(HashJoinOperator.StatKey.class) {
+    HASH_JOIN(2, HashJoinOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
         StatMap<HashJoinOperator.StatKey> stats = (StatMap<HashJoinOperator.StatKey>) map;
         response.mergeMaxRowsInOperator(stats.getLong(HashJoinOperator.StatKey.EMITTED_ROWS));
         response.mergeMaxRowsInJoinReached(stats.getBoolean(HashJoinOperator.StatKey.MAX_ROWS_IN_JOIN_REACHED));
+        response.mergeMaxRowsInJoin(stats.getLong(HashJoinOperator.StatKey.MAX_ROWS_IN_JOIN));
       }
 
       @Override
-      public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics) {
-        super.updateServerMetrics(map, serverMetrics);
+      public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics) {
+        super.updateMseMetrics(map, mseMetrics);
         @SuppressWarnings("unchecked")
         StatMap<HashJoinOperator.StatKey> stats = (StatMap<HashJoinOperator.StatKey>) map;
         boolean maxRowsInJoinReached = stats.getBoolean(HashJoinOperator.StatKey.MAX_ROWS_IN_JOIN_REACHED);
         if (maxRowsInJoinReached) {
-          serverMetrics.addMeteredGlobalValue(ServerMeter.HASH_JOIN_TIMES_MAX_ROWS_REACHED, 1);
+          mseMetrics.addMeteredGlobalValue(MseMeter.HASH_JOIN_TIMES_MAX_ROWS_REACHED, 1);
         }
-        serverMetrics.addTimedValue(ServerTimer.HASH_JOIN_BUILD_TABLE_CPU_TIME_MS,
+        mseMetrics.addTimedValue(MseTimer.HASH_JOIN_BUILD_TABLE_CPU_TIME_MS,
             stats.getLong(HashJoinOperator.StatKey.TIME_BUILDING_HASH_TABLE_MS), TimeUnit.MILLISECONDS);
       }
     },
-    INTERSECT(SetOperator.StatKey.class) {
+    INTERSECT(3, SetOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -283,7 +288,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(SetOperator.StatKey.EMITTED_ROWS));
       }
     },
-    LEAF(LeafOperator.StatKey.class) {
+    LEAF(4, LeafOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -297,13 +302,13 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.addBrokerStats(brokerStats);
       }
     },
-    LITERAL(LiteralValueOperator.StatKey.class) {
+    LITERAL(5, LiteralValueOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         // Do nothing
       }
     },
-    MAILBOX_RECEIVE(BaseMailboxReceiveOperator.StatKey.class) {
+    MAILBOX_RECEIVE(6, BaseMailboxReceiveOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -312,27 +317,27 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
       }
 
       @Override
-      public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics) {
-        super.updateServerMetrics(map, serverMetrics);
+      public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics) {
+        super.updateMseMetrics(map, mseMetrics);
         @SuppressWarnings("unchecked")
         StatMap<BaseMailboxReceiveOperator.StatKey> stats = (StatMap<BaseMailboxReceiveOperator.StatKey>) map;
 
-        serverMetrics.addMeteredGlobalValue(ServerMeter.MULTI_STAGE_IN_MEMORY_MESSAGES,
+        mseMetrics.addMeteredGlobalValue(MseMeter.IN_MEMORY_MESSAGES,
             stats.getInt(BaseMailboxReceiveOperator.StatKey.IN_MEMORY_MESSAGES));
-        serverMetrics.addMeteredGlobalValue(ServerMeter.MULTI_STAGE_RAW_MESSAGES,
+        mseMetrics.addMeteredGlobalValue(MseMeter.RAW_MESSAGES,
             stats.getInt(BaseMailboxReceiveOperator.StatKey.RAW_MESSAGES));
-        serverMetrics.addMeteredGlobalValue(ServerMeter.MULTI_STAGE_RAW_BYTES,
+        mseMetrics.addMeteredGlobalValue(MseMeter.RAW_BYTES,
             stats.getLong(BaseMailboxReceiveOperator.StatKey.DESERIALIZED_BYTES));
 
-        serverMetrics.addTimedValue(ServerTimer.MULTI_STAGE_DESERIALIZATION_CPU_TIME_MS,
+        mseMetrics.addTimedValue(MseTimer.DESERIALIZATION_CPU_TIME_MS,
             stats.getLong(BaseMailboxReceiveOperator.StatKey.DESERIALIZATION_TIME_MS), TimeUnit.MILLISECONDS);
-        serverMetrics.addTimedValue(ServerTimer.RECEIVE_DOWNSTREAM_WAIT_CPU_TIME_MS,
+        mseMetrics.addTimedValue(MseTimer.RECEIVE_DOWNSTREAM_WAIT_CPU_TIME_MS,
             stats.getLong(BaseMailboxReceiveOperator.StatKey.DOWNSTREAM_WAIT_MS), TimeUnit.MILLISECONDS);
-        serverMetrics.addTimedValue(ServerTimer.RECEIVE_UPSTREAM_WAIT_CPU_TIME_MS,
+        mseMetrics.addTimedValue(MseTimer.RECEIVE_UPSTREAM_WAIT_CPU_TIME_MS,
             stats.getLong(BaseMailboxReceiveOperator.StatKey.UPSTREAM_WAIT_MS), TimeUnit.MILLISECONDS);
       }
     },
-    MAILBOX_SEND(MailboxSendOperator.StatKey.class) {
+    MAILBOX_SEND(7, MailboxSendOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -341,14 +346,14 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
       }
 
       @Override
-      public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics) {
+      public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics) {
         @SuppressWarnings("unchecked")
         StatMap<MailboxSendOperator.StatKey> stats = (StatMap<MailboxSendOperator.StatKey>) map;
-        serverMetrics.addTimedValue(ServerTimer.MULTI_STAGE_SERIALIZATION_CPU_TIME_MS,
+        mseMetrics.addTimedValue(MseTimer.SERIALIZATION_CPU_TIME_MS,
             stats.getLong(MailboxSendOperator.StatKey.SERIALIZATION_TIME_MS), TimeUnit.MILLISECONDS);
       }
     },
-    MINUS(SetOperator.StatKey.class) {
+    MINUS(8, SetOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -356,7 +361,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(SetOperator.StatKey.EMITTED_ROWS));
       }
     },
-    PIPELINE_BREAKER(PipelineBreakerOperator.StatKey.class) {
+    PIPELINE_BREAKER(9, PipelineBreakerOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -364,7 +369,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(PipelineBreakerOperator.StatKey.EMITTED_ROWS));
       }
     },
-    SORT_OR_LIMIT(SortOperator.StatKey.class) {
+    SORT_OR_LIMIT(10, SortOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -372,7 +377,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(SortOperator.StatKey.EMITTED_ROWS));
       }
     },
-    TRANSFORM(TransformOperator.StatKey.class) {
+    TRANSFORM(11, TransformOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -380,7 +385,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(TransformOperator.StatKey.EMITTED_ROWS));
       }
     },
-    UNION(SetOperator.StatKey.class) {
+    UNION(12, SetOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -388,7 +393,7 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(SetOperator.StatKey.EMITTED_ROWS));
       }
     },
-    WINDOW(WindowAggregateOperator.StatKey.class) {
+    WINDOW(13, WindowAggregateOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
@@ -396,51 +401,102 @@ public abstract class MultiStageOperator implements Operator<MseBlock>, AutoClos
         response.mergeMaxRowsInOperator(stats.getLong(WindowAggregateOperator.StatKey.EMITTED_ROWS));
         response.mergeMaxRowsInWindowReached(
             stats.getBoolean(WindowAggregateOperator.StatKey.MAX_ROWS_IN_WINDOW_REACHED));
+        response.mergeMaxRowsInWindow(stats.getLong(WindowAggregateOperator.StatKey.MAX_ROWS_IN_WINDOW));
       }
 
       @Override
-      public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics) {
+      public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics) {
         @SuppressWarnings("unchecked")
         StatMap<WindowAggregateOperator.StatKey> stats = (StatMap<WindowAggregateOperator.StatKey>) map;
         if (stats.getBoolean(WindowAggregateOperator.StatKey.MAX_ROWS_IN_WINDOW_REACHED)) {
-          serverMetrics.addMeteredGlobalValue(ServerMeter.WINDOW_TIMES_MAX_ROWS_REACHED, 1);
+          mseMetrics.addMeteredGlobalValue(MseMeter.WINDOW_TIMES_MAX_ROWS_REACHED, 1);
         }
       }
     },
-    LOOKUP_JOIN(LookupJoinOperator.StatKey.class) {
+    LOOKUP_JOIN(14, LookupJoinOperator.StatKey.class) {
       @Override
       public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
         @SuppressWarnings("unchecked")
         StatMap<LookupJoinOperator.StatKey> stats = (StatMap<LookupJoinOperator.StatKey>) map;
         response.mergeMaxRowsInOperator(stats.getLong(LookupJoinOperator.StatKey.EMITTED_ROWS));
       }
+    },
+    UNNEST(15, UnnestOperator.StatKey.class) {
+      @Override
+      public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
+        @SuppressWarnings("unchecked")
+        StatMap<UnnestOperator.StatKey> stats = (StatMap<UnnestOperator.StatKey>) map;
+        response.mergeMaxRowsInOperator(stats.getLong(UnnestOperator.StatKey.EMITTED_ROWS));
+      }
+    },
+    REPEAT(16, RepeatOperator.StatKey.class) {
+      @Override
+      public void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map) {
+        @SuppressWarnings("unchecked")
+        StatMap<RepeatOperator.StatKey> stats = (StatMap<RepeatOperator.StatKey>) map;
+        response.mergeMaxRowsInOperator(stats.getLong(RepeatOperator.StatKey.EMITTED_ROWS));
+      }
     };
 
+    // When adding new operator types, update MAX_ID if the new ID exceeds the current max
+    private static final int MAX_ID = 16;
+    private static final Type[] ID_TO_TYPE = new Type[MAX_ID + 1];
+
+    static {
+      for (Type type : values()) {
+        int id = type._id;
+        if (id < 0 || id > Byte.MAX_VALUE) {
+          throw new IllegalStateException("Operator type id must fit in a signed byte (0-127), but " + type
+              + " has id " + id);
+        }
+        Preconditions.checkArgument(id <= MAX_ID,
+            "Operator type id %s exceeds MAX_ID %s. Please update MAX_ID.", id, MAX_ID);
+        Preconditions.checkArgument(ID_TO_TYPE[id] == null,
+            "Duplicate id %s for types %s and %s", id, ID_TO_TYPE[id], type);
+        ID_TO_TYPE[id] = type;
+      }
+    }
+
+    private final int _id;
     private final Class _statKeyClass;
 
-    Type(Class<? extends StatMap.Key> statKeyClass) {
+    Type(int id, Class<? extends StatMap.Key> statKeyClass) {
+      _id = id;
       _statKeyClass = statKeyClass;
     }
 
-    /**
-     * Gets the class of the stat key for this operator type.
-     * <p>
-     * Notice that this is not including the generic type parameter, because Java generic types are not expressive
-     * enough indicate what we want to say, so generics here are more problematic than useful.
-     */
+    /// Returns the stable ID used for serialization.
+    ///
+    /// This ID is guaranteed to remain constant across versions, unlike [#ordinal()] which can change
+    /// if enum entries are reordered.
+    public int getId() {
+      return _id;
+    }
+
+    /// Returns the Type for the given serialization ID, or null if no such type exists.
+    @Nullable
+    public static Type fromId(int id) {
+      if (id >= 0 && id < ID_TO_TYPE.length) {
+        return ID_TO_TYPE[id];
+      }
+      return null;
+    }
+
+    /// Gets the class of the stat key for this operator type.
+    ///
+    /// Notice that this is not including the generic type parameter, because Java generic types are not expressive
+    /// enough indicate what we want to say, so generics here are more problematic than useful.
     public Class getStatKeyClass() {
       return _statKeyClass;
     }
 
-    /**
-     * Merges the stats from the given map into the given broker response.
-     * <p>
-     * Each literal has its own implementation of this method, which assumes the given map is of the correct type
-     * (compatible with {@link #getStatKeyClass()}). This is a way to avoid casting in the caller.
-     */
+    /// Merges the stats from the given map into the given broker response.
+    ///
+    /// Each literal has its own implementation of this method, which assumes the given map is of the correct type
+    /// (compatible with [#getStatKeyClass()]). This is a way to avoid casting in the caller.
     public abstract void mergeInto(BrokerResponseNativeV2 response, StatMap<?> map);
 
-    public void updateServerMetrics(StatMap<?> map, ServerMetrics serverMetrics) {
+    public void updateMseMetrics(StatMap<?> map, MseMetrics mseMetrics) {
       // Do nothing by default
     }
   }
